Update VOCUS 2023-02-15 patch

--- a/_posts/2020-10-26-VOCUS-公務員日常不日常-day51-水果節主辦攝影棚小跟班.html
+++ b/_posts/2020-10-26-VOCUS-公務員日常不日常-day51-水果節主辦攝影棚小跟班.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1554941829-202a0b2403b8?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjI1Njg3fQ" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1554941829-202a0b2403b8" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1554941829-202a0b2403b8?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjI1Njg3fQ" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1554941829-202a0b2403b8" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">水果節籌備期間，常常接到不同廠商的詢問，有的是地方電臺想尋求合作機會，有些是擺攤攤商的自薦。</div>
 <div class="draft-block draft--p left">去年我們和廣播電臺合作，區長上了一次他們的廣播節目，將水果節的消息推播出去。</div>
 <div class="draft-block draft--p left">這次的電話和往年都不一樣。</div>
@@ -19,13 +19,11 @@ author: 新葉
 <div class="draft-block draft--p left">「那我稍等就傳採訪通知以及題綱給你，再請你確認有沒有需要修改的地方。」該企劃人員說道。</div>
 <div class="draft-block draft--p left">「好的，我等等也會跟我們區長確定時間。」訪談對象是區長，因此我不怎麼擔心。她隨口就可以成章，想必不需要準備太多擬答，只需重點提示即可。</div>
 <div class="draft-block draft--p left">我可以安心當個小跟班，去攝影棚參觀了喔耶！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">拿著採訪通知，我蹦蹦跳跳跑去區長室，但區長不在。</div>
 <div class="draft-block draft--p left">我轉向區長室的同事，「姐姐，我要預約區長行程。X月X日，或者X日也可以。」</div>
 <div class="draft-block draft--p left">「……區長那幾天都不在喔。」同事開啟電腦的行事曆，推推眼鏡。</div>
 <div class="draft-block draft--p left">什麼！</div>
 <div class="draft-block draft--p left">我美好的小跟班行程呢！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「請主秘參加。」</div>
 <div class="draft-block draft--p left">過了不久，區長傳來Line訊息。</div>
 <div class="draft-block draft--p left">主秘是吧……如果是主秘，就不能隨便應付、也不能放生他了呢……</div>
@@ -34,7 +32,6 @@ author: 新葉
 <div class="draft-block draft--p left">「葉子，我該講什麼？」</div>
 <div class="draft-block draft--p left">「放心吧！我會幫主秘準備好擬答。」雖然還沒看過對方傳來的題綱，但我拍胸脯保證沒有問題。介紹活動內容什麼的，小事情啦。</div>
 <div class="draft-block draft--p left">「好，麻煩你了。」主秘安心下來。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">送走主秘，我打開那份文件，稍微瀏覽了一輪題目。</div>
 <div class="draft-block draft--p left">「請問貴區該水果的品系有哪些、分佈範圍以及產期是否有所不同？栽培管理又有哪裡需要注意？」</div>
 <div class="draft-block draft--p left">嗯？</div>
@@ -83,7 +80,6 @@ author: 新葉
 <div class="draft-block draft--p left">「需要！絕對需要！」我立刻抓住這個救命的繩索。能花錢解決的都是小事。</div>
 <div class="draft-block draft--p left">不久後，青農也傳來照片，有不少是符合需求的照片，再加上我去附近農田拍攝的照片，大致上可以順利交差了。</div>
 <div class="draft-block draft--p left">好累，還沒錄影我怎麼心那麼累？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">終於到了錄影當日，扛著跟農民買來的水果禮盒與各種本地的特產伴手禮，我和主秘前往攝影棚。</div>
 <div class="draft-block draft--p left">抵達時前一組還在錄影，企劃小姐帶我們到休息室。主秘看上去相當鎮定，但我注意到他拿著我幫他準備的擬答，看了又看，口中喃喃自語。看來還是會緊張呢。</div>
 <div class="draft-block draft--p left">「主秘，來抽考一下！」我伸出手，跟他索取擬答，主秘很乾脆的交出來，找了椅子坐下。</div>
@@ -98,7 +94,6 @@ author: 新葉
 <div class="draft-block draft--p left">跟著他們走進攝影棚，強烈的冷氣是我的第一印象－－上次拍攝是露天錄影，陽光超級強烈，還有雞跑來跑去，真是天壤之別啊。</div>
 <div class="draft-block draft--p left">「好涼喔！」我發出讚嘆，身旁的企劃小姐聽了，笑一笑。</div>
 <div class="draft-block draft--p left">「可是主持人跟來賓坐的地方很熱喔，燈光打下來溫度很高。」</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">室內正中央是一個漂亮的背景布板、兩張椅子，前方有好幾台攝影機，以及許多打光用的燈具。地上還有攝影機的軌道，天花板也垂掛下不同的器材，看起來非常厲害。</div>
 <div class="draft-block draft--p left">工作人員七手八腳將水果拿出來，擺放在精美的木頭籃子中，再擺上一些本地蔬菜、小點心，畫面頓時變得相當精美。</div>
 <div class="draft-block draft--p left">準備開始錄影，主秘跟主持人分別坐下，面對鏡頭。主秘依舊一臉鎮定，我反而看得緊張。</div>
