--- a/_posts/2020-10-26-VOCUS-公務員日常不日常-day52-水果節主辦之核銷地獄.html
+++ b/_posts/2020-10-26-VOCUS-公務員日常不日常-day52-水果節主辦之核銷地獄.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1600493033157-eed3fbe95d96?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjI1Njg3fQ" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1600493033157-eed3fbe95d96" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1600493033157-eed3fbe95d96?ixlib=rb-1.2.1&amp;q=80&amp;fm=jpg&amp;crop=entropy&amp;cs=tinysrgb&amp;w=1080&amp;fit=max&amp;ixid=eyJhcHBfaWQiOjI1Njg3fQ" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1600493033157-eed3fbe95d96" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">這次的水果節，總之是順利的結束了。</div>
 <div class="draft-block draft--p left">除了經歷「活動前一週才知道跟廟會撞期」以及「地方首長硬要比開幕提早一小時來致詞」事件以外，整體來說沒有遇上麻煩的事情，因此不在這裡贅述。</div>
 <div class="draft-block draft--p left">真正麻煩的，是事後核銷。</div>
@@ -67,7 +67,6 @@ author: 新葉
 <div class="draft-block draft--p left">我一直以為節儉是美德……嗚嗚嗚……</div>
 <div class="draft-block draft--p left">難怪有聽過同事聊到預算執行率的問題，也常聽到「想辦法花完這筆錢就對了」這種說法。</div>
 <div class="draft-block draft--p left">終於知道原因。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">折騰了好一陣子，我才將這些事情搞定。</div>
 <div class="draft-block draft--p left">對於我這種偶爾才處理一次核銷的菜鳥而言，要注意的事情實在太多了，很容易出紕漏。</div>
 <div class="draft-block draft--p left">所幸解決方法千百種，不至於走投無路。然而內心的忿忿不平仍然存在。</div>
