--- a/_posts/2020-12-08-VOCUS-公務員日常不日常-day54-認證標章執行去.html
+++ b/_posts/2020-12-08-VOCUS-公務員日常不日常-day54-認證標章執行去.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDN8fHxlbnwwfHx8&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="717" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDN8fHxlbnwwfHx8&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="717" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1432888498266-38ffec3eaf0a" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">自從上次去外地取經後，認證標章工作如火如荼展開。</div>
 <div class="draft-block draft--p left">從繪製標章圖案到向智慧財產局申請標章使用權、執行認證流程等，一個個新的挑戰緊接而來。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 dOXRXF"></pre></div>
@@ -20,7 +20,6 @@ author: 新葉
 <div class="draft-block draft--p left">不愧是肉搜達人，動作俐落、絲毫不拖泥帶水。</div>
 <div class="draft-block draft--p left">很快他就找到一模一樣的圖片，來自某付費圖庫網站。</div>
 <div class="draft-block draft--p left">「……好險好險。」欸這位廠商，我花錢請你設計，不要給我搞抄襲這套啊！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">好不容易搞定圖案，申請權利的費用及代辦費又是一筆花費。</div>
 <div class="draft-block draft--p left">剛好那時聽說農糧署有一筆認證相關費用可以申請，我趕緊跟農業局確認詳情，開始打計畫書。</div>
 <div class="draft-block draft--p left">「成哥，你可以幫我看一下計畫書嗎？」將文件印了出來，我向成哥尋求協助。</div>
@@ -38,7 +37,6 @@ author: 新葉
 <div class="draft-block draft--p left">我依言將計畫拿給主管看，簡單修改後就發給農業局。</div>
 <div class="draft-block draft--p left">好吧，先不管。反正假如有問題，農業局也會打電話找我修正。</div>
 <div class="draft-block draft--p left">我放下這件事，專心處理起其他工作。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">過了一週，我接到農業局的來電。</div>
 <div class="draft-block draft--p left">可惡，果然寫得太差了嗎？</div>
 <div class="draft-block draft--p left">「葉小姐，我有收到公文了，想問一下認證的流程－－」</div>
