--- a/_posts/2020-12-21-VOCUS-公務員日常不日常-day55-尋找承辦之產製儲銷惡夢-上.html
+++ b/_posts/2020-12-21-VOCUS-公務員日常不日常-day55-尋找承辦之產製儲銷惡夢-上.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1594652634010-275456c808d0?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDEyfHxnYW1lfGVufDB8fHw&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1594652634010-275456c808d0" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1594652634010-275456c808d0?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDEyfHxnYW1lfGVufDB8fHw&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1594652634010-275456c808d0" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">「葉子，某某議員跟農業局要到了五十萬的經費要推廣我們的農產品，你要找時間開始寫計畫了喔！」</div>
 <div class="draft-block draft--p left">某日，區長如此指示道。</div>
 <div class="draft-block draft--p left">啊？又要我負責寫計畫了，而且是在連假之前，總覺得有某種既視感。可是這什麼沒頭沒尾的指示啊？</div>
@@ -47,7 +47,6 @@ author: 新葉
 <div class="draft-block draft--p left">「應該是農業局局長答應的。」區長說，「可是聽說局長最近要換人了，不知道後續會如何。」</div>
 <div class="draft-block draft--p left">……所以這個計畫也可能取消囉？</div>
 <div class="draft-block draft--p left">玩我啊！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">挫敗的我決定好好放連假去。</div>
 <div class="draft-block draft--p left">悠閒的結束假期後，我將這件事拋到一旁。敵不動、我不動，等市府人事異動結束後，總會有結果。</div>
 <div class="draft-block draft--p left">果然，過了一陣子，我接到農業局的電話。</div>
@@ -57,7 +56,6 @@ author: 新葉
 <div class="draft-block draft--p left">聞言，她的語氣有點遲疑。</div>
 <div class="draft-block draft--p left">「啊，是這樣的，局長說要寫就寫多一點，請你改擬一個兩百萬的計畫喔。」</div>
 <div class="draft-block draft--p left">……什麼鬼！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">隔沒幾天，我被抓去農業局開會。</div>
 <div class="draft-block draft--p left">區長、主秘、課長和我，臨時接到了開會通知，在摸不著頭緒的情況下抵達會議室。</div>
 <div class="draft-block draft--p left">等了一陣子，農業局長姍姍來遲，一坐下就直切主題。</div>
@@ -71,7 +69,6 @@ author: 新葉
 <div class="draft-block draft--p left">……是怎樣，原來傳聞農會跟農民不合是真的嗎！</div>
 <div class="draft-block draft--p left">農會的大哥人很好啊啊。</div>
 <div class="draft-block draft--p left">「嗯，這個計畫由公所提報市府。」局長直接裁定。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">五十萬計畫直接變兩百萬，沒事找事做啊！我默默腹誹那位爭取經費的議員。但只能無奈接受，回去寫計畫。</div>
 <div class="draft-block draft--p left">以往水果節的計畫都二三十萬可以解決，第一次寫破百萬的計畫，我感到相當驚恐。而且水果節有之前的資料可以抄，這次可要從零開始。</div>
 <div class="draft-block draft--p left">「葉子，走。」某日下班後，區長對我招手，原來為了深入了解農民的需求，她要帶我上山參加產銷班的聚會。</div>
