--- a/_posts/2020-12-21-VOCUS-公務員日常不日常-day56-尋找承辦之產製儲銷惡夢-下.html
+++ b/_posts/2020-12-21-VOCUS-公務員日常不日常-day56-尋找承辦之產製儲銷惡夢-下.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1508912909015-070def409663?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDEyMXx8cGljbmljfGVufDB8fHw&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="721" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1508912909015-070def409663" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1508912909015-070def409663?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDEyMXx8cGljbmljfGVufDB8fHw&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="721" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1508912909015-070def409663" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">抵達山上某位農民的住家，產銷班成員已經陸續集合。</div>
 <div class="draft-block draft--p left">時值水果產期，有的農民剛從果園過來，手中拎著一大袋水果，也有農民帶了茶葉準備來泡茶。</div>
 <div class="draft-block draft--p left">削好的水果、瓜子和餅乾點心一一準備好放在桌上，農民彼此問候，客廳內熱鬧起來。我躲在長桌一角，聽著區長和眾人閒聊，默默嗑起瓜子。</div>
@@ -37,7 +37,6 @@ author: 新葉
 <div class="draft-block draft--p left">欄杆外是兩側幽深的山林，深藍色的夜空裡，數顆亮星襯著月光點綴其中。朝下俯瞰，遠方地平面上點點燈火一閃一爍，構成一幅光暗交錯的美景。</div>
 <div class="draft-block draft--p left">望著美麗的夜景，疲憊感似乎不再那麼強烈。這是我第一次那麼晚了還逗留在山上，收獲了這樣的景色，我震懾不已。</div>
 <div class="draft-block draft--p left">偶爾有這樣的體驗，並不是壞事。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">經過上次的聚會，我終於對計畫項目有概念一些，寫起來輕鬆許多。然而瀟瀟灑灑寫完的計畫，不管送幾次市府，都迎來退件的結果。</div>
 <div class="draft-block draft--p left">「貴所所提計畫，請確實依X月X日會議結論辦理。」公文如是說。</div>
 <div class="draft-block draft--p left">我打去問該承辦，對方也說不出所以然來。似乎是我的計畫方向跟開會結論差距太大，市府承辦不知道如何跟局長交代。</div>
@@ -49,7 +48,6 @@ author: 新葉
 <div class="draft-block draft--p left">「不，你不敢。」成哥頭也不抬，回答。</div>
 <div class="draft-block draft--p left">「絕對不敢。」賢慧在一旁附和。</div>
 <div class="draft-block draft--p left">欸欸欸！讓我講個幹話又不會怎樣！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">隔天的會議，果然沒有農會參加。一樣的組成人員，局長一樣重覆上次的想法。</div>
 <div class="draft-block draft--p left">而這次局長說服了農民代表，一切將會照局長的意思去執行。</div>
 <div class="draft-block draft--p left">「公所承辦一週後送計畫書進來沒問題吧？會不會太趕？」局長看向我。</div>
@@ -58,7 +56,6 @@ author: 新葉
 <div class="draft-block draft--p left">「不然改十天後交計畫，再麻煩你們了。」局長逕自決定。</div>
 <div class="draft-block draft--p left">……</div>
 <div class="draft-block draft--p left">期限會這麼趕，是因為卡到計畫核定後執行期程、核銷的問題，我只能認分接受。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">終於計畫撰寫告一段落，才將公文送去市府，這時我忽然收到某位民代的開會通知。該民代邀集農委會、農糧署及農業局各單位來參加，指定在公所會議室召開。</div>
 <div class="draft-block draft--p left">「你好，我這邊是農糧署XX組，請問下週民代的開會要討論些什麼？」</div>
 <div class="draft-block draft--p left">同樣收到通知的本署人員打來詢問，但我也很疑惑。</div>
@@ -81,7 +78,6 @@ author: 新葉
 <div class="draft-block draft--p left">我想起之前申請的某個計畫，當初隨手寫寫的計畫就隨便通過了，其實計畫本身並不是重點，有沒有經費最重要。</div>
 <div class="draft-block draft--p left">「還是要拜託各位長官協助爭取啦！」農業局長官說，負責主持的民代也是拼命點頭。</div>
 <div class="draft-block draft--p left">會議最後，在各部會長官承諾會回去爭取經費下結束了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">正和同事整理著場地，市府的承辦還未離去，跑來找我。</div>
 <div class="draft-block draft--p left">「這個計畫再請你協助修改，儘早送進來喔！」她的態度很誠懇，但我已經不想管了。</div>
 <div class="draft-block draft--p left">隔幾天，我將計畫書錯字改一改，照樣送進市府。</div>
