--- a/_posts/2021-01-19-VOCUS-公務員日常不日常-day58-區長-再會.html
+++ b/_posts/2021-01-19-VOCUS-公務員日常不日常-day58-區長-再會.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1495041845204-feee5b0bda50?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDIzfHxmb2xsb3d8ZW58MHx8fA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="1620" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1495041845204-feee5b0bda50" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1495041845204-feee5b0bda50?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDIzfHxmb2xsb3d8ZW58MHx8fA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="1620" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1495041845204-feee5b0bda50" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">我所服務的單位屬於直轄市範圍，身為事務官的區長並非民選產生，而是由民政局指派，每隔一定的時間就會輪調。</div>
 <div class="draft-block draft--p left">剛進公部門服務時，區長對我而言是一個高不可及的大人物，每次跟她說話都要相當謹慎，深怕自己出錯。</div>
 <div class="draft-block draft--p left">然而經歷短短幾年的相處，我察覺區長並不可怕。身為一個領導者，她提出的建議都非常具體，假如她相信了對方，她就願意全權交給對方處理。</div>
@@ -27,7 +27,6 @@ author: 新葉
 <div class="draft-block draft--p left">怎麼辦？換了新的區長，意味著新的風格。身為農業推廣承辦的我，感覺就首當其衝。目前在做的推廣政策可能整個翻盤，水果節也要重新規劃。</div>
 <div class="draft-block draft--p left">隨便一想像就很麻煩啊啊啊！</div>
 <div class="draft-block draft--p left">「沒事的，我們做最好的準備。」成哥只是淡淡說了這樣一句話。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">不久後，民政局發佈了新聞，公告區長人事異動資訊。即將來到本區的，是一位男性，之前在其他區擔任區長。</div>
 <div class="draft-block draft--p left">區長到任當日，一走進公所，我只有一個感想。</div>
 <div class="draft-block draft--p left">「鳥語花香、熱帶叢林」。</div>
@@ -40,7 +39,6 @@ author: 新葉
 <div class="draft-block draft--p left">雖然我也知道婚喪喜慶都會找同家店沒錯啦！</div>
 <div class="draft-block draft--p left">當天來了好幾次小貨車，送進各種花籃。其中的花籃也包含區長原先公所的同仁所致贈過來，我們公所同仁也集資贈送花籃到原區長新到職的公所去。</div>
 <div class="draft-block draft--p left">歡送，並歡迎。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">頭幾天新區長很忙碌，去拜會各里地方人事，我們一直到幾天後的員工月會，才真正見到他。</div>
 <div class="draft-block draft--p left">說到員工月會，是全體公所同仁都要參加的會議，會中宣導各種業務，也是難得的交流機會。</div>
 <div class="draft-block draft--p left">只要有新人加入，就會在這時安排自我介紹，先前因為疫情的關係停辦一段時間，我們一直提醒新人弟弟做好心理準備。</div>
@@ -69,7 +67,6 @@ author: 新葉
 <div class="draft-block draft--p left">「區長、主秘，各位同仁好，我是農業課葉XX，可以叫我葉子就好。主要負責農業調查、推廣事宜，跟各位比較常接觸的時候就是水果節，未來還請多多指教。」我迅速敏捷結束我的會合，迅速坐下。</div>
 <div class="draft-block draft--p left">所以我說那個交友條件呢？成哥一個眼神飄過來，彷彿在悄聲問。</div>
 <div class="draft-block draft--p left">要講你自己講！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">員工會議結束，同事們互相評論著彼此的表現，有人被笑說在正經什麼，有人稱讚對方表現很穩。</div>
 <div class="draft-block draft--p left">感覺氣氛比平常更歡樂呢。</div>
 <div class="draft-block draft--p left">然而緊接著，我就被區長召見了。</div>
