--- a/_posts/2021-01-19-VOCUS-公務員日常不日常-day59-新區長-哈囉.html
+++ b/_posts/2021-01-19-VOCUS-公務員日常不日常-day59-新區長-哈囉.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDI0fHxmb3JtJTIwcmVzZWFyY2h8ZW58MHx8fA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="715" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDI0fHxmb3JtJTIwcmVzZWFyY2h8ZW58MHx8fA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="715" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1504868584819-f8e8b4b6d7e3" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">「葉子，區長找你。」放下電話，同事說。</div>
 <div class="draft-block draft--p left">欸欸欸？</div>
 <div class="draft-block draft--p left">最近送了什麼公文上去？還是又有什麼水果滯銷了？我迅速在記憶中搜尋一輪，但一時之間想不起來。</div>
@@ -30,7 +30,6 @@ author: 新葉
 <div class="draft-block draft--p left">「……好。」抱著公文夾，我轉身離開區長室。</div>
 <div class="draft-block draft--p left">才剛踏出門，區長已經就下一個文件和課長討論起來，質問的聲音在室內迴盪，區長的語調，有著不容反駁的氣勢。</div>
 <div class="draft-block draft--p left">和前區長的風格，完全不同。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">回到座位，同事賢慧湊了過來。</div>
 <div class="draft-block draft--p left">「如何？新區長還好嗎？」</div>
 <div class="draft-block draft--p left">「新的區長，好攻啊……」我還沒從驚嚇中回神，忍不住脫口而出。</div>
@@ -43,7 +42,6 @@ author: 新葉
 <div class="draft-block draft--p left">「葉子。」課長下樓了，筆直朝我走來，「區長要我們課提出某某水果的SWOT和TOWS分析，下週交，再麻煩你了。」</div>
 <div class="draft-block draft--p left">又有新任務！</div>
 <div class="draft-block draft--p left">……話說那是什麼有點耳熟，又有點陌生的東西啊？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">SWOT分析，藉由研究外部因素、內部因素，區分各自優缺點，以便擬定對策的一種分析方法。SWOT相反過來就是TOWS，將前面分析的優劣勢、潛力威脅去做綜合評估，提出具體的方案。</div>
 <div class="draft-block draft--p left">原來是大學專題啊，我還以為是公文簽辦、文陳存呢！</div>
 <div class="draft-block draft--p left">這位區長到底想做什麼啊？</div>
@@ -56,7 +54,6 @@ author: 新葉
 <div class="draft-block draft--p left">「什麼？」我一時反應不過來。</div>
 <div class="draft-block draft--p left">「大家一起想，比較快。」成哥說道，賢慧也點點頭。</div>
 <div class="draft-block draft--p left">看著他們倆，我忽然一陣感動。有這兩位同事真好，我也不能洩氣，要好好加油才行。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「就產量而言，本區是全市第一名，全臺前幾名。這個是內部優勢（S）。」我率先提出農情調查的數據。</div>
 <div class="draft-block draft--p left">「至於內部劣勢（W）……病蟲害嚴重，農民過度噴藥也容易有藥物殘留的問題。」</div>
 <div class="draft-block draft--p left">「品質參差不齊。生產成本高，造成末端售價也高，消費者購買意願變低。」</div>
@@ -72,7 +69,6 @@ author: 新葉
 <div class="draft-block draft--p left">但……</div>
 <div class="draft-block draft--p left">「結論是，我們的水果沒什麼優勢，缺點倒是一大堆呢！」成哥和賢慧對看一眼，紛紛表示認同。</div>
 <div class="draft-block draft--p left">這樣完全不行啊啊啊！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">在各種掙扎奮戰之下，我終於將分析報告完成。</div>
 <div class="draft-block draft--p left">隔週的主管會報，我陪同課長一起參與，準備上臺報告。在場只有我一個基層承辦，而我理所當然被安排到最後報告。</div>
 <div class="draft-block draft--p left">這是新區長到任後第二次召開的主管會報。和員工月會不同，主管會報由各課室課長、主任參加，定期報告各項業務進度。</div>
