--- a/_posts/2021-02-11-VOCUS-公務員日常不日常-day60-youtuber合作案.html
+++ b/_posts/2021-02-11-VOCUS-公務員日常不日常-day60-youtuber合作案.html
@@ -8,14 +8,13 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1548328928-34db1c5fcc1f?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDM0fHx5b3V0dWJlcnxlbnwwfHx8&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1548328928-34db1c5fcc1f" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1548328928-34db1c5fcc1f?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MXwyNTY4N3wwfDF8c2VhcmNofDM0fHx5b3V0dWJlcnxlbnwwfHx8&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1548328928-34db1c5fcc1f" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">結果SWOT報告完，區長提出了完全不同的方案。</div>
 <div class="draft-block draft--p left">水果產期即將來臨，他打算趁此時推出宣傳影片，提高討論度、吸引消費者上門。</div>
 <div class="draft-block draft--p left">老實說，區長根本就有預謀了吧？我們做的分析只是幌子吧？</div>
 <div class="draft-block draft--p left">但最重要的是……區長說的某Youtuber太紅了，根本請不起啊啊啊！</div>
 <div class="draft-block draft--p left">稍微查詢了下目前的行情，不管打幾折下來，都遠遠超出我們的預算。</div>
 <div class="draft-block draft--p left">決定了，找別人吧！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">跟課長討論後，我們鎖定一位在地的Youtuber，影片多以介紹美食觀光為主，整體調性符合我們的要求。</div>
 <div class="draft-block draft--p left">第一次跟網紅進行合作邀約，我謹慎慎重的送出訊息，詳細寫下我們的需求以及預算。考量到水果產期將至，時間緊湊，只希望對方可以合作了。</div>
 <div class="draft-block draft--p left">過了幾個小時，收到了對方的回覆。</div>
@@ -34,7 +33,6 @@ author: 新葉
 <div class="draft-block draft--p left">「這次時間很趕，我傾向交給專業的來。」我擠出笑容，想辦法否定這件事。</div>
 <div class="draft-block draft--p left">水果節那次完全是靠熱情去拍出來的，不光是需要同仁盡心配合，後製剪接也花了不少時間。饒了我吧！</div>
 <div class="draft-block draft--p left">「你們找誰拍片我沒有意見，這筆經費我也同意你們動用。」區長出乎意料的乾脆，繼續說：「腳本就交給主秘和課長決定就好。只要記得一件事，『前十秒就要吸睛』。」</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">得到首長的首肯，我終於可以好好放手去做。和網紅討論了幾天，我們敲定最終拍攝腳本，也確定了拍攝地點。</div>
 <div class="draft-block draft--p left">拍攝前幾日，我和對方約了時間前往場勘。該網紅獨自過來會面，是一位聲音明亮爽朗、很有想法的一個人。</div>
 <div class="draft-block draft--p left">這次拍攝主要在一個果園進行，由果園主人帶領我們參觀。</div>
@@ -44,7 +42,6 @@ author: 新葉
 <div class="draft-block draft--p left">網紅看了看園子，跟主人詢問拍攝時的日照方向，以此安排拍攝位置。拍攝學問大不同，我趁機學了幾招。</div>
 <div class="draft-block draft--p left">我們一一確認了拍攝場景，達成共識。拍攝當日我不會參與，一切都交給拍攝團隊和農民去協調了。</div>
 <div class="draft-block draft--p left">花錢找人拍就是愉悅！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「這是宣傳影片最終版本。」收到網紅傳來的影片檔後，我發給課長，請他轉發到主管群組。</div>
 <div class="draft-block draft--p left">等了一個下午，主管群組已讀了一輪，眾主管都沒有意見。</div>
 <div class="draft-block draft--p left">「盡快發佈。」區長只淡淡丟下這句話。</div>
