--- a/_posts/2021-03-13-VOCUS-公務員日常不日常-day62-電臺出任務.html
+++ b/_posts/2021-03-13-VOCUS-公務員日常不日常-day62-電臺出任務.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1581547848545-a75a2634ba23?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDE2fHxwb2RjYXN0fGVufDB8fHx8MTYxNTY0MDQxNA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1581547848545-a75a2634ba23" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1581547848545-a75a2634ba23?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDE2fHxwb2RjYXN0fGVufDB8fHx8MTYxNTY0MDQxNA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1581547848545-a75a2634ba23" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">「水果宣傳方法不只有拍影片，你們回去跟購物台接洽，我們上購物頻道賣水果也不錯。」某日，新區長又提出了新點子。「還可以跟廣播電臺合作，去宣傳我們的水果。」</div>
 <div class="draft-block draft--p left">不、不會吧？</div>
 <div class="draft-block draft--p left">區長室中，我和課長面面相覷，我想假裝沒有聽見區長的提議，課長想找其他話題帶過。這天我們在討論其他的工作內容，但話題聊著聊著，談到了農產業推廣。</div>
@@ -28,7 +28,6 @@ author: 新葉
 <div class="draft-block draft--p left">……什麼跟什麼啦！</div>
 <div class="draft-block draft--p left">我可以不要這種磨練嗎？</div>
 <div class="draft-block draft--p left">看來就算之後被區長抓去購物台賣水果，我也不用感到太驚訝了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">下午，我和民政課的同事一起抵達電臺樓下。電臺位於一處住宅區大樓內，從外部根本看不出這裡藏了一家公司。</div>
 <div class="draft-block draft--p left">同事是一位熟齡女子，看她的茫然表情，似乎也跟我一樣還搞不清楚狀況。</div>
 <div class="draft-block draft--p left">「我今天應該在市區上課的，臨時被主管叫回來……」她無奈的說。</div>
@@ -36,7 +35,6 @@ author: 新葉
 <div class="draft-block draft--p left">「……聽起來真不妙……」</div>
 <div class="draft-block draft--p left">「臨場發揮囉！我已經想好了，我要給自己取一個藝名，你覺得叫葉綠素或是小葉子如何？」反正電臺錄音嘛，不會露臉，當然要給自己取個特別一點的名字囉！</div>
 <div class="draft-block draft--p left">「……我用本名就好。」同事擺擺手，完全不打算跟我走相同路線。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「你好，我們是XX區公所的人，今天來錄音。」走出電梯，循著指示牌走進去，我們打了聲招呼。</div>
 <div class="draft-block draft--p left">辦公室的人同事抬頭看向我們，其中一位大哥放下手中的便當，引導我們先到錄音室等待。</div>
 <div class="draft-block draft--p left">錄音室是個小小涼爽的房間，一張桌子、幾張椅子，兩架麥克風以及幾台電腦設備，看上去相當簡單，卻讓人不由得緊張了起來。</div>
@@ -88,7 +86,6 @@ author: 新葉
 <div class="draft-block draft--p left">可惡。</div>
 <div class="draft-block draft--p left">「廣播是明天上午七點播出，影片則是十點放上我們的粉專，記得要看喔！」跟我們道別時，主持人如是說。</div>
 <div class="draft-block draft--p left">嗯，我絕對不會看的。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">隔天，影片的連結準時被放上公所的Line群組。區長還簡單的說了一句「請協助轉發推廣」，於是大家紛紛回應「收到」。</div>
 <div class="draft-block draft--p left">……真的不用那麼認真分享沒關係啦……</div>
 <div class="draft-block draft--p left">我看見隔壁的同事默默戴起了耳機，手機螢幕上出現了我、主持人以及同事的臉。</div>
@@ -102,7 +99,6 @@ author: 新葉
 <div class="draft-block draft--p left">是也不用那麼捧場啦拜託。</div>
 <div class="draft-block draft--p left">我瞄了一眼她的螢幕，影片的長度差不多就是我們錄音的長度，看來根本沒有剪接吧？</div>
 <div class="draft-block draft--p left">我、我失言的部分……</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">過了幾天，偶爾有不同的同事跟我提起這支電臺宣傳影片，評價普遍是正向的。也有人看了兩遍，對我的表現滿是讚賞。</div>
 <div class="draft-block draft--p left">甚至有農民打電話來問水果認證的事情，讓我相當驚訝。</div>
 <div class="draft-block draft--p left">有些農民看完後，還加以糾正，告訴我在影片中說明錯誤的地方。</div>
