--- a/_posts/2021-03-26-VOCUS-公務員日常不日常-day64-第一次記者會怎麼辦.html
+++ b/_posts/2021-03-26-VOCUS-公務員日常不日常-day64-第一次記者會怎麼辦.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1503428593586-e225b39bddfe?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDZ8fFByZXNzJTIwY29uZmVyZW5jZXxlbnwwfHx8fDE2MTY3NzM4Mjk&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1503428593586-e225b39bddfe" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1503428593586-e225b39bddfe?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDZ8fFByZXNzJTIwY29uZmVyZW5jZXxlbnwwfHx8fDE2MTY3NzM4Mjk&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="720" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1503428593586-e225b39bddfe" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">之前我曾經寫了註定不會執行的計畫書，以為這件事就這樣告一段落。（前情提要：<a href="https://vocus.cc/article/5fe05ad4fd89780001189a2b" target="_blank" class="draft--a">Day55：尋找承辦之產製儲銷惡夢（上）</a>、<a href="https://vocus.cc/article/5fe05dbffd8978000118a081" target="_blank" class="draft--a">Day56：尋找承辦之產製儲銷惡夢（下）</a>）</div>
 <div class="draft-block draft--p left">殊不知民代的影響力極大，一旦出手，沒錢也會把錢擠出來。</div>
 <div class="draft-block draft--p left">在各方壓力之下，市府重新研擬全新的計畫書，送入中央單位審查，終於順利拿到經費。</div>
@@ -47,7 +47,6 @@ author: 新葉
 <div class="draft-block draft--p left">「好。」我同意，忽然有些不解。</div>
 <div class="draft-block draft--p left">這個活動，農業局已經交由公所辦理了，現在是想協助我們嗎？</div>
 <div class="draft-block draft--p left">願意幫忙是很好，但人多嘴雜，總覺得不太妙。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">辦理的期程非常緊湊，我跟設計廠商幾經洽談，好不容易才確認了牌子的設計稿。廠商提醒要盡快定稿，否則來不及送印。我想起承辦的要求，順手傳給她看。</div>
 <div class="draft-block draft--p left">「這是手舉牌初稿，還有貼紙的圖案。」</div>
 <div class="draft-block draft--p left">「……我們主管希望可以再設計更文青一點喔。」過了半天，承辦回覆。</div>
@@ -70,7 +69,6 @@ author: 新葉
 <div class="draft-block draft--p left">「……知道了，我會轉達的。」對方沉默了一下，回應道。</div>
 <div class="draft-block draft--p left">不開心的放下電話，我將記者會拋到一旁，開始處理其他工作。</div>
 <div class="draft-block draft--p left">有夠麻煩的。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">接近下班時間，承辦再度來電。</div>
 <div class="draft-block draft--p left">「是這樣的，主管說，假如你們要全權辦理，那我們就不插手任何作業，也不會再提供建議。相對我們也不會撥人力協助，只幫忙邀請長官媒體跟借場地。」</div>
 <div class="draft-block draft--p left">……多兩三個人幫我有什麼意義嗎？</div>
@@ -95,12 +93,10 @@ author: 新葉
 <div class="draft-block draft--p left">我很少被工作搞得這麼不開心，也很少想要堅持自己的立場。</div>
 <div class="draft-block draft--p left">但這次，或許該放低姿態了。</div>
 <div class="draft-block draft--p left">真是不甘心。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">隔天，我向課長報告這件事，而課長一如既往的沒有意見，交給我決定。</div>
 <div class="draft-block draft--p left">「公所這邊沒有辦過記者會的經驗，所以還是請你們多多協助了。」我打電話跟承辦，告訴她，語氣盡可能裝沒事。明明前一天才發火過而已，只希望對方不會太小心眼。</div>
 <div class="draft-block draft--p left">「好，今天下午有空嗎？記者會剩沒幾天了，我們直接面對面討論吧。」承辦說，態度一如往常，也許早就知道結果會是如此。</div>
 <div class="draft-block draft--p left">我們很快敲定會面時間，地點直接選在市府的會議室現場。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">抵達會議室，承辦、以及另一位女性同仁在現場等我。承辦介紹說這位同仁也會一起協助，我們互相打了招呼，在桌邊坐下，開始討論細節。</div>
 <div class="draft-block draft--p left">「展示區大概需要三張桌子，桌巾我記得辦公室有。請農民多準備一些枝條布袋當裝飾品。」</div>
 <div class="draft-block draft--p left">「筆電要請葉子你這邊準備，找一些輕音樂當背景播放。」</div>
@@ -112,7 +108,6 @@ author: 新葉
 <div class="draft-block draft--p left">辦記者會不難，但要辦到好，還真的不簡單。</div>
 <div class="draft-block draft--p left">心裡還是有些不甘心，不過我知道自己這樣做是正確的。</div>
 <div class="draft-block draft--p left">吸收這次的經驗，為下次獨立運作做準備吧。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">很快的，記者會當日來臨，一大早我就和兩位承辦開始擺設展示區。公所的同仁也陸續前來會合，幫忙排列椅子、調整動線。</div>
 <div class="draft-block draft--p left">市府的主管過來打了招呼，確認展示品都擺放妥當，又匆匆離去。</div>
 <div class="draft-block draft--p left">記者會的辦理時間很微妙，在一個要早不早的時間，區長、主秘、公所各課室主管都前來充場面，也叫了不少農民參加，就是要讓長官來時看得滿意。</div>
