--- a/_posts/2021-08-28-VOCUS-公務員日常不日常-day75-疫苗接種站支援.html
+++ b/_posts/2021-08-28-VOCUS-公務員日常不日常-day75-疫苗接種站支援.html
@@ -8,10 +8,9 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:6240px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1624884270783-2688cce31870?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDMzfHx2YWNjaW5lfGVufDB8fHx8MTYzMDEzNjM5OA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="6240" data-height="4160" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1624884270783-2688cce31870" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1624884270783-2688cce31870?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDMzfHx2YWNjaW5lfGVufDB8fHx8MTYzMDEzNjM5OA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="6240" data-height="4160" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1624884270783-2688cce31870" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">最近新聞沸沸揚揚的話題之一，正是疫苗施打。</div>
 <div class="draft-block draft--p left">身為公所的一員，雖不是衛生防疫相關的承辦，卻也參與了其中的一環。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">第二辦公室的同仁中，有一位是里幹事妹子。在疫苗政策宣佈後，每天都在打電話。</div>
 <div class="draft-block draft--p left">講什麼呢？詢問符合施打資格的高齡者有沒有意願施打疫苗，以利造冊。</div>
 <div class="draft-block draft--p left">目前已經有預約系統，然而長輩多不熟悉操作，通常由里幹事詢問後，再協助上網登記。</div>
@@ -33,7 +32,6 @@ author: 新葉
 <div class="draft-block draft--p left">「恭喜！」</div>
 <div class="draft-block draft--p left">一瞬間，整個辦公室的人都為她鼓掌，彷彿什麼案件成交的現場。</div>
 <div class="draft-block draft--p left">不誇張，就是這麼感動。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">接著，週五的下班時刻，公所大群組傳來了一張排班表。民政課長表示因應大型接種站開設，本所需要支援市區的接種。</div>
 <div class="draft-block draft--p left">「請被排到的工作人員明後天準時過去支援喔！」</div>
 <div class="draft-block draft--p left">仔細一看，我被安排在隔天，也就是週六。</div>
@@ -48,12 +46,10 @@ author: 新葉
 <div class="draft-block draft--p left">「公所過去支援的通常站門口，負責登記、量體溫。我上次站了整整兩天，人一直來一直來，都沒時間休息，還曬傷了。」里幹事說，隔著口罩的聲音有些無力，似乎想起了那兩天的痛苦。</div>
 <div class="draft-block draft--p left">欸欸欸？明明都沒有人想去打疫苗欸？</div>
 <div class="draft-block draft--p left">不過想想，市區的人口本來就比較多、和本區的小型接種站目標族群也不同，似乎不能相提並論。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">週六，看見同事在群組回報當天狀況的慘烈－－上千人前往注射，幾乎沒時間休息。</div>
 <div class="draft-block draft--p left">「真的要曬一整天太陽嗎？」我緊張的問同事。一白遮三醜，臉蛋是我的第二生命啊！</div>
 <div class="draft-block draft--p left">「我今天都在外面量體溫，超熱，我看民眾也熱壞了。但有的人被排在室內量血壓，要看你運氣。」</div>
 <div class="draft-block draft--p left">跟同事交流了一番，我已經做好心理準備。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">週日，防曬塗好塗滿、外套包緊緊，我毅然決然前往接種站報到。</div>
 <div class="draft-block draft--p left">在門口指揮的主管將部分的人留在了外頭的量體溫等候區，我則是跟隨指示前往了體育場內－－喔喔喔，室內！</div>
 <div class="draft-block draft--p left">「你們今天負責量血壓。」</div>
@@ -83,7 +79,6 @@ author: 新葉
 <div class="draft-block draft--p left">拿著飲料、便當和點心，民代的助理又塞過來一袋宣導品，我大包小包，跟衛生局姐姐道別。</div>
 <div class="draft-block draft--p left">「謝謝你們今天來幫忙。」姐姐笑著說。</div>
 <div class="draft-block draft--p left">「辛苦了。」</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">隨著疫苗施打率的普及，支援接種站的行程想必會越來越多。第一次的支援似乎有點耍廢，感覺下一次就不會那麼偷閒了？</div>
 <div class="draft-block draft--p left">平日支援，影響工作；假日支援，影響休息。然而這也是工作的一環，只能坦然接受。</div>
 <div class="draft-block draft--p left">期許大家都平安度過疫情。</div>
