--- a/_posts/2021-09-28-VOCUS-公務員日常不日常-day76-農保勘查之平地駕駛篇.html
+++ b/_posts/2021-09-28-VOCUS-公務員日常不日常-day76-農保勘查之平地駕駛篇.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:8192px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1543279385-618b485c1677?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDJ8fGRyaXZlfGVufDB8fHx8MTYzMjgzODEzNw&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="8192" data-height="4604" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1543279385-618b485c1677" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1543279385-618b485c1677?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDJ8fGRyaXZlfGVufDB8fHx8MTYzMjgzODEzNw&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="8192" data-height="4604" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1543279385-618b485c1677" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">「葉子，這個月的會勘排在下週可以嗎？」</div>
 <div class="draft-block draft--p left">上次聊過農保會勘（<a href="https://vocus.cc/article/6104efdefd89780001867b01" target="_blank" class="draft--a">Day73：農保會勘初登場</a>），很快的又到了下個月，本地農會主任再次跟我敲時間。</div>
 <div class="draft-block draft--p left">「預計安排兩天，其中一天的土地以平地為主，我會安排我們保險部的同事負責喔。」主任說。</div>
@@ -20,7 +20,6 @@ author: 新葉
 <div class="draft-block draft--p left">而我只能且戰且走，每筆土地都做足了功課，前往下個地點之前總是再三確認路線，然而轉個彎就喪失了方向感，迷失在山林之中。</div>
 <div class="draft-block draft--p left">不能漏氣才行！</div>
 <div class="draft-block draft--p left">收到了主任傳來的土地資料，我開始將地段地號輸入電腦，一筆筆找出位置，標記在地圖上。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">會勘當日，我一早就拿了公務車鑰匙，在車內好好布置了一番。</div>
 <div class="draft-block draft--p left">布置什麼？當然是我的手機架囉！</div>
 <div class="draft-block draft--p left">為了這天，我特定去添購了汽車用的手機支架，方便我操作、導航使用。</div>
@@ -36,7 +35,6 @@ author: 新葉
 <div class="draft-block draft--p left">「先去半山腰的XX地段XX地號，主任說這筆在另一個方向，跟我們平地的勘查排在一起剛好。」</div>
 <div class="draft-block draft--p left">……一點也不剛好啊啊啊！</div>
 <div class="draft-block draft--p left">於是，久違的駕駛、陌生的車車、險峻的山路，我來了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">其實在整理地圖時我有注意到這一筆地號。混在平地資料中的半山土地，還以為是主任放錯。幸好當時有一起放進地圖中，但我萬萬沒想到第一筆就要挑戰山路。</div>
 <div class="draft-block draft--p left">那裡說是半山腰，卻有著本區充滿代表性的陡峭山路之一。</div>
 <div class="draft-block draft--p left">我硬著頭皮開始開車，試圖緩和緊張，開始跟妹妹聊天。</div>
@@ -66,7 +64,6 @@ author: 新葉
 <div class="draft-block draft--p left">寬心許多，我也跟著下了車，隨他們去農地拍照簽名。</div>
 <div class="draft-block draft--p left">準備回頭，農民中氣十足的在一旁指揮，方向盤打到底、後退、回正一些再繼續後退，很快的，車子回到來的路上，感動無比。</div>
 <div class="draft-block draft--p left">跟農民道別，我們再次啟程，回到平地繼續未盡的勘查。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">下一筆，我們停在一片休耕田地旁。我和妹妹下了車，妹妹去跟農民對資料，而我開始尋找迴轉的地方。</div>
 <div class="draft-block draft--p left">左看右看，只看到旁邊水田的小小水泥鋪面。那是要讓農機具可以下田的地方，也是我目前唯一的迴轉處。</div>
 <div class="draft-block draft--p left">「大哥，可以幫我看一下嗎？我要迴轉。」我無助的問。</div>
@@ -94,7 +91,6 @@ author: 新葉
 <div class="draft-block draft--p left">難不成，我真的開得很爛？</div>
 <div class="draft-block draft--p left">妹妹下車去跟農民接洽，這次因為田就在路邊，我決定不下車，在車上確認回程路線。出風口吹來涼冷的風、音響播著輕音樂，對比外頭的酷熱，果然在車上比較舒適。</div>
 <div class="draft-block draft--p left">這天的勘查，算是順利結束。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">不管如何，我依舊堅持下個月還是要開車出門。</div>
 <div class="draft-block draft--p left">一來練車、二來不想曬太陽。</div>
 <div class="draft-block draft--p left">就是委屈農會妹妹一點了。</div>
