--- a/_posts/2021-10-23-VOCUS-公務員日常不日常-day77-農地勘查之雷殘篇-上.html
+++ b/_posts/2021-10-23-VOCUS-公務員日常不日常-day77-農地勘查之雷殘篇-上.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:5184px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1516214104703-d870798883c5?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDl8fEZvcmVzdHxlbnwwfHx8fDE2MzQ5NzMxOTU&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="5184" data-height="3456" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1516214104703-d870798883c5" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1516214104703-d870798883c5?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDl8fEZvcmVzdHxlbnwwfHx8fDE2MzQ5NzMxOTU&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="5184" data-height="3456" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1516214104703-d870798883c5" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">農用證明，全名「農業用地作農業使用證明書」，是一個命名不精準的證明書。</div>
 <div class="draft-block draft--p left">何謂不精準？因為單憑這個名字，根本不知道是拿來辦減稅的。</div>
 <div class="draft-block draft--p left">坐在成哥旁邊數年，對這業務略有所聞。</div>
@@ -16,7 +16,6 @@ author: 新葉
 <div class="draft-block draft--p left">在交接的時候（<a href="https://vocus.cc/article/60e01ac9fd89780001bfdcce" target="_blank" class="draft--a">Day71：起起伏伏活動主辦記事（下）</a>），成哥簡短的將農證交接完，還跟我說，如果真的忙不過來，就放到職代接手再處理。</div>
 <div class="draft-block draft--p left">但眼下職代連個影子都沒見著，加上申請人和代書總是心繫著自己的案子，三天兩頭就在催件，怎麼可能真放好幾個月！</div>
 <div class="draft-block draft--p left">一開始我確實很隨興在辦案子，但自從跟課長講好要調整工作後，我開始正視這份業務。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「成哥，農地上面有一棟三合院的要怎麼辦啊？」</div>
 <div class="draft-block draft--p left">「成哥，為什麼有一筆建地混在申請書裡面？這個可以辦農證嗎？」</div>
 <div class="draft-block draft--p left">「放貨櫃算合格嗎？整筆都是池塘可以嗎？」</div>
@@ -25,12 +24,10 @@ author: 新葉
 <div class="draft-block draft--p left">之前只要有問題，成哥都會拿出農地管理講義，細細翻閱。那本講義快被成哥翻到爛，貼了許多便利貼，說是農地管理的寶典也不為過。</div>
 <div class="draft-block draft--p left">上過課的我也有相同的講義，可惜我還未習得快速翻閱的技巧。</div>
 <div class="draft-block draft--p left">成哥就是我的寶典，嗯。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">申請人遞交申請書後，我們會安排時間去農地現場會勘，確認農作事實。如果是平地農田就算了，一眼望去就能判斷有無非法建物、也能很明確分辨農作物種類。然而多數的案件都藏身在山林一角，儘管透過航照圖先了解狀況，總會在抵達現場後才看見小小的寮子躲在果樹旁。</div>
 <div class="draft-block draft--p left">「那個寮子……有申請容許嗎……」我無奈的定位、拍照，思考著要如何跟申請人說明。</div>
 <div class="draft-block draft--p left">農地上存在非法的建物就不能核發農證，除非申請合法、或是提供分管圖、切結書。</div>
 <div class="draft-block draft--p left">至於怎麼申請合法，又是另一門學問了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">有時案件會一次增加好多筆，而我又忙於農損，一不小心就會累積一大疊的案子，然後一直被申請人催件。</div>
 <div class="draft-block draft--p left">「葉子，XXX在問他的農證好了沒。」一日，勘查回來，我看見桌上貼了好幾張問進度的便利貼，遠遠的同事又遞過來一張便利貼。</div>
 <div class="draft-block draft--p left">吼吼吼，還沒聯絡他就是還沒辦完啦！</div>
@@ -39,7 +36,6 @@ author: 新葉
 <div class="draft-block draft--p left">……好無聊的工作。</div>
 <div class="draft-block draft--p left">一日，我望著農地管理系統的介面，不斷重複著相同的步驟，不禁浮現這樣的感想。</div>
 <div class="draft-block draft--p left">我真的有辦法接這個業務嗎？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">某個月份，連日下雨。看著身後那一大疊申請書，我驚覺不出門勘查不行了。雖然沒有一定時間限制，但這牽涉到申請人辦過戶的問題，總是讓他們著急詢問進度。</div>
 <div class="draft-block draft--p left">山路容易濕滑，先去看平地的田好了！</div>
 <div class="draft-block draft--p left">我穿上雨鞋、備好雨衣，火速約了申請人，趁著下午放晴的短暫時間外出勘查。</div>
