--- a/_posts/2021-10-23-VOCUS-公務員日常不日常-day78-農地勘查之雷殘篇-下.html
+++ b/_posts/2021-10-23-VOCUS-公務員日常不日常-day78-農地勘查之雷殘篇-下.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:5184px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1599522316015-cec257031c9c?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDd8fG11ZHxlbnwwfHx8fDE2MzQ5NzM2MTI&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="5184" data-height="3456" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1599522316015-cec257031c9c" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1599522316015-cec257031c9c?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDd8fG11ZHxlbnwwfHx8fDE2MzQ5NzM2MTI&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="5184" data-height="3456" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1599522316015-cec257031c9c" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">下雨天滑倒過後，腿上的瘀青伴隨了我好幾週。</div>
 <div class="draft-block draft--p left">我有打給申請人抱怨這件事，而申請人自己也承認那邊的路況很差，同意等放晴再勘查。</div>
 <div class="draft-block draft--p left">過了一陣子，天氣終於晴朗，我再度扛著厚厚一疊申請案出門勘查。現在的我騎車都相當小心翼翼，只要看到地上有泥土、水窪，打死都不往前騎一步。</div>
@@ -29,7 +29,6 @@ author: 新葉
 <div class="draft-block draft--p left">「好的。」妹子乖巧的拿出手機，找到通報專用的群組，「『連日豪雨導致泥沙淤積，急需搶通』，通報人：憤怒的葉小姐。電話留公所就好了吧？」</div>
 <div class="draft-block draft--p left">等等，憤怒是怎樣？</div>
 <div class="draft-block draft--p left">於是這個案子繼續被我擱在一旁。等待道路搶通的同時，我還有許多業務還沒辦完。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">又過幾天，天氣預報顯示週末即將下雨，會持續整整一週的時間。</div>
 <div class="draft-block draft--p left">什麼！那我今天要趕快出門才行！</div>
 <div class="draft-block draft--p left">我放下農損的資料，再次意識到農證的申請案不知不覺又積了一疊。吼吼吼，真的忙不過來啦。</div>
@@ -80,13 +79,11 @@ author: 新葉
 <div class="draft-block draft--p left">雨鞋也是個好配件，在地上慢慢拖磨，幫助增加摩擦力、校正方向。</div>
 <div class="draft-block draft--p left">最重要的一點，一定要等天晴路乾才能出門。</div>
 <div class="draft-block draft--p left">這些技巧我都謹記在心，雖然不知道實地操作會如何，但我會更加注意。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「……那上次的申請案該怎麼辦才好啊……」某天，跟同事聊完後，我嘆了口氣。</div>
 <div class="draft-block draft--p left">第一次雷殘、跟里幹事通報搶修的那條路，連日下雨之下，聽說一直沒有辦法處理。</div>
 <div class="draft-block draft--p left">「你說XX里溪邊那件？」一旁的工程同事聽見，說：「我等等剛好要去看那條路，要不要載你去？」</div>
 <div class="draft-block draft--p left">「可以嗎！」我眼睛一亮。「可是那邊真的有辦法通行嗎？聽說滿滿都是泥巴。」</div>
 <div class="draft-block draft--p left">「你騎機車當然沒辦法，我們開車去。」</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">駕駛著公務車神獸，同事左拐右彎，很快就抵達我上次止步的位置，他眼睛眨也不眨，就帥氣的踩下油門，朝那厚厚的泥巴地前進。</div>
 <div class="draft-block draft--p left">一手將車子的設定轉為四輪傳動模式，同事解釋說這樣才有足夠的動力前進，即使兩個輪子打滑、還有兩個輪子可以抓地前進。</div>
 <div class="draft-block draft--p left">「其實在轉彎時多少都會有輪胎滑行的感覺，但都在可控範圍內。」</div>
@@ -103,7 +100,6 @@ author: 新葉
 <div class="draft-block draft--p left">「農地接電。」我心懷感激的將照片存起來。照片中，除了幾株破布子之外沒看到農作痕跡。</div>
 <div class="draft-block draft--p left">「在這種溪坡地接電，有事？」同事甚是不解。</div>
 <div class="draft-block draft--p left">我也不懂，不過那是台電的事，嘿嘿嘿。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">在同事的協助下，我順利將這個案子交出去，了卻一件煩心事。</div>
 <div class="draft-block draft--p left">然而回頭一看，櫃子上又積了厚厚一疊申請書。緊接著是下一波的災害開設，繼續忙到暗無天日。</div>
 <div class="draft-block draft--p left">短短一個月內摔了兩次，曾經讓我萌生「會不會我根本不適合接成哥的業務？」這個念頭。</div>
