--- a/_posts/2021-12-27-VOCUS-公務員日常不日常-day82-優秀的政府-二.html
+++ b/_posts/2021-12-27-VOCUS-公務員日常不日常-day82-優秀的政府-二.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6000px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1511297968426-a869b61af3da?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDIxfHxjcnlpbmd8ZW58MHx8fHwxNjQwNjEyNzA0&amp;ixlib=rb-1.2.1&amp;q=85" data-width="6000" data-height="4000" data-position="center" src="https://images.unsplash.com/photo-1511297968426-a869b61af3da" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1511297968426-a869b61af3da?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDIxfHxjcnlpbmd8ZW58MHx8fHwxNjQwNjEyNzA0&amp;ixlib=rb-1.2.1&amp;q=85" data-width="6000" data-height="4000" data-position="center" src="https://images.unsplash.com/photo-1511297968426-a869b61af3da" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">隔天起床，聲音有些沙啞。難免，畢竟昨天又哭又叫的。</div>
 <div class="draft-block draft--p left">但還是要面對現實。我無力的打開手機，訊息馬上跳出來。</div>
 <div class="draft-block draft--p left">「八點半召開主管會報，請農損主辦參加。」</div>
