--- a/_posts/2022-01-06-VOCUS-公務員日常不日常-day84-優秀的政府-四.html
+++ b/_posts/2022-01-06-VOCUS-公務員日常不日常-day84-優秀的政府-四.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6000px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1631084854691-49b4975177f3?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDEwNHx8bGV0dGVyfGVufDB8fHx8MTY0MTQ3NjA3Nw&amp;ixlib=rb-1.2.1&amp;q=85" data-width="6000" data-height="4000" data-position="center" src="https://images.unsplash.com/photo-1631084854691-49b4975177f3" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1631084854691-49b4975177f3?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDEwNHx8bGV0dGVyfGVufDB8fHx8MTY0MTQ3NjA3Nw&amp;ixlib=rb-1.2.1&amp;q=85" data-width="6000" data-height="4000" data-position="center" src="https://images.unsplash.com/photo-1631084854691-49b4975177f3" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">「這封公所寄來的通知單，只補助幾百元！我有五分農地，判斷標準何在？政府口口聲聲說的『從優、從速、從寬』又何在？」</div>
 <div class="draft-block draft--p left">一天夜裡，社群軟體上的一篇貼文炸了開來。</div>
 <div class="draft-block draft--p left">在那個群組有很多本地人，其中一個人貼出了我們寄的通知單，上頭寫著核定面積只有幾厘地，備註還寫著「未達合理種植密度」。</div>
