--- a/_posts/2022-03-13-VOCUS-公務員日常不日常-day86-登革熱孳清宣導.html
+++ b/_posts/2022-03-13-VOCUS-公務員日常不日常-day86-登革熱孳清宣導.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<div class="draft--imgNormal draft-block"><div><div style="height:400px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1572262086204-3909bfc93ea0?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDh8fG1vc3F1aXRvJTIwbmV0fGVufDB8fHx8MTY0NzE2OTk5Mw&ixlib=rb-1.2.1&q=85" data-width="5141" data-height="3427" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
+<div class="draft--imgNormal draft-block"><div><div data-src="https://images.unsplash.com/photo-1572262086204-3909bfc93ea0?crop=entropy&cs=srgb&fm=jpg&ixid=MnwyNTY4N3wwfDF8c2VhcmNofDh8fG1vc3F1aXRvJTIwbmV0fGVufDB8fHx8MTY0NzE2OTk5Mw&ixlib=rb-1.2.1&q=85" data-width="5141" data-height="3427" data-position="center"></div><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></div>
 <div class="draft-block draft--p left">「葉子，明天早上八點，要去做登革熱防治宣導。」某天，我接到人事主任的電話。</div>
 <div class="draft-block draft--p left">啥？宣導？</div>
 <div class="draft-block draft--p left">喔喔喔，好像有這一回事。</div>
