--- a/_posts/2022-03-13-VOCUS-公務員日常不日常-day87-擔任面試官.html
+++ b/_posts/2022-03-13-VOCUS-公務員日常不日常-day87-擔任面試官.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:4000px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1565688534245-05d6b5be184a?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fGludGVydmlld3xlbnwwfHx8fDE2NDcxNzA1ODE&amp;ixlib=rb-1.2.1&amp;q=85" data-width="4000" data-height="2667" data-position="center" src="https://images.unsplash.com/photo-1565688534245-05d6b5be184a" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1565688534245-05d6b5be184a?crop=entropy&amp;cs=srgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fGludGVydmlld3xlbnwwfHx8fDE2NDcxNzA1ODE&amp;ixlib=rb-1.2.1&amp;q=85" data-width="4000" data-height="2667" data-position="center" src="https://images.unsplash.com/photo-1565688534245-05d6b5be184a" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">本課的人員更迭頻繁，尤其是工程人員總是一個接一個商調離開，在等待新人報到前，職代不可少。</div>
 <div class="draft-block draft--p left">前一陣子負責處理災害搶修工程的職代是一位年輕女孩，似乎被龐大的工作量嚇得不輕，只做了短短幾個月就離職。</div>
 <div class="draft-block draft--p left">因為業務沒有重疊，我對她的印象不深，唯一記得的是她幫忙勘查過農損，還成為雷殘犧牲者之一。</div>
