--- a/_posts/2022-06-06-VOCUS-公務員日常不日常-day92-農業勞動力調查與職代姐的道別.html
+++ b/_posts/2022-06-06-VOCUS-公務員日常不日常-day92-農業勞動力調查與職代姐的道別.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6000px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1601737786679-f6883570cfb5?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDI2MHx8ZmFybWVyfGVufDB8fHx8MTY1NDUyMTg5Nw&amp;ixlib=rb-1.2.1&amp;q=80" data-width="6000" data-height="4000" data-position="center" src="https://images.unsplash.com/photo-1601737786679-f6883570cfb5" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1601737786679-f6883570cfb5?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDI2MHx8ZmFybWVyfGVufDB8fHx8MTY1NDUyMTg5Nw&amp;ixlib=rb-1.2.1&amp;q=80" data-width="6000" data-height="4000" data-position="center" src="https://images.unsplash.com/photo-1601737786679-f6883570cfb5" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">勞動力調查期程在即，有別於往年只需在成哥身旁晃來晃去當個小協辦（<a href="https://vocus.cc/article/5ecfbdc8fd89780001884729" target="_blank" class="draft--a">Day41：農業勞動力調查協辦二三事（上）</a>），今年的我不得不獨挑大樑了。</div>
 <div class="draft-block draft--p left">開會當日，農業局的會議室內坐著滿滿的人，聽著承辦說明調查規定。</div>
 <div class="draft-block draft--p left">嗯嗯嗯，六十五歲以下的農民、有一定規模的農地，就是標準調查戶，跟之前都一樣。</div>
@@ -30,7 +29,6 @@ author: 新葉
 <div class="draft-block draft--p left">找賢慧？單工弟？還是……職代姐？</div>
 <div class="draft-block draft--p left">想起了和畜牧戶交談自如的職代姐，調查員非她莫屬。</div>
 <div class="draft-block draft--p left">眼下的同事人選實在不多。這個調查要做的是農業勞動力缺工訪問，但仔細想想，我們才是農業缺工的族群吧，嗚嗚嗚。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「……就是這樣，這次的勞動力調查要麻煩你跟我一起做了。」</div>
 <div class="draft-block draft--p left">會議隔日，我告訴職代姐，並將會議簡報跟教學影片拿給她，讓她自行學習。</div>
 <div class="draft-block draft--p left">只見職代姐鎮定的點頭，回到位置開始看起教學影片。</div>
@@ -38,14 +36,12 @@ author: 新葉
 <div class="draft-block draft--p left">話說新人報到的時間還沒到，算了算職代姐還能把下一期的農情調查跟畜牧調查做完再走呢！優秀的人才就是要用好用滿。</div>
 <div class="draft-block draft--p left">我呵呵笑著，將調查名冊拆成一半，把相對單純的山區交給她負責。</div>
 <div class="draft-block draft--p left">……絕對不是因為我不想跑山上喔！絕對不是！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「你好，我要跟你約時間做缺工調查……啊，我不是詐騙啦……」職代姐開始打電話做初步訪問，但是她的聲音太好聽了，一直被農民當成詐騙電話。</div>
 <div class="draft-block draft--p left">畢竟畜牧場已經習慣接公所的電話了，其他農民相對陌生呢。</div>
 <div class="draft-block draft--p left">相比之下我已經沒有這種困擾，跟農民聊得很愉快。</div>
 <div class="draft-block draft--p left">「哩賀！我公所啦！借問一下喔！」我直接拿去年申報災害的資料開始念，讓對方以為補助出了什麼問題，因此不敢掛電話。再慢慢引導他們講出我想要的答案。</div>
 <div class="draft-block draft--p left">哼哼哼，善用手邊的資源沒毛病。</div>
 <div class="draft-block draft--p left">不過我的腔調似乎越來越鄉土了，真的沒問題嗎？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">調查作業進行得很順利，看職代姐每天都往山區跑，費了不少心思搜集資料，我心中只有滿滿的敬佩。</div>
 <div class="draft-block draft--p left">「聽說新人下個月底才會來報到，月初的農情跟畜牧調查還是要麻煩你了。」一日，跟人事主任確認了期程，我笑著對她說。</div>
 <div class="draft-block draft--p left">只見職代姐眼神飄移，沒有正面應允。</div>
@@ -59,7 +55,6 @@ author: 新葉
 <div class="draft-block draft--p left">「可以，我會趕出來。」職代姐答應了我。</div>
 <div class="draft-block draft--p left">儘管心中一片慌亂，我只能默默接受這個結果。</div>
 <div class="draft-block draft--p left">離新人報到還有一段時間、加上新人沒辦法馬上上工，看來接下來的日子，會不太好過。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">很快到了月底，職代姐確實如期交卷，將一疊厚厚的調查表交到我手中。</div>
 <div class="draft-block draft--p left">反之我才完成寥寥幾張……加上她的數量剛好可以完成第一次回表，謝天謝地。</div>
 <div class="draft-block draft--p left">「這段日子謝謝你。」我向她道謝。</div>
@@ -69,7 +64,6 @@ author: 新葉
 <div class="draft-block draft--p left">又回到成哥調走時的狀況了呢。</div>
 <div class="draft-block draft--p left">職代姐很優秀，可惜不能再多待久一些。</div>
 <div class="draft-block draft--p left">我感慨著，繼續做剩下的勞動力調查。照目前的進度，應該可以準時完成第二次回表。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「葉子，這些調查表麻煩你重新確認。」</div>
 <div class="draft-block draft--p left">連假後，農業局的承辦傳來了訊息，看來他在連假期間真的很認真在初審文件。</div>
 <div class="draft-block draft--p left">我點開他回傳的資料，發現幾乎都是職代姐的筆跡。出錯率之高，讓我背脊發涼。</div>
