--- a/_posts/2022-07-15-VOCUS-公務員日常不日常-day94-新人與農業災害-同時登場.html
+++ b/_posts/2022-07-15-VOCUS-公務員日常不日常-day94-新人與農業災害-同時登場.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6307px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1620841713108-18ad2b52d15c?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDN8fGhhbmQlMjBpbiUyMGhhbmR8ZW58MHx8fHwxNjU3ODg5ODUz&amp;ixlib=rb-1.2.1&amp;q=80" data-width="6307" data-height="4205" data-position="center" src="https://images.unsplash.com/photo-1620841713108-18ad2b52d15c" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1620841713108-18ad2b52d15c?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDN8fGhhbmQlMjBpbiUyMGhhbmR8ZW58MHx8fHwxNjU3ODg5ODUz&amp;ixlib=rb-1.2.1&amp;q=80" data-width="6307" data-height="4205" data-position="center" src="https://images.unsplash.com/photo-1620841713108-18ad2b52d15c" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">新人報到的那天，前一個災害勘查剛告一段落，我正忙著整理大家回傳的勘查資料，準備報送抽查。</div>
 <div class="draft-block draft--p left">「葉子，新人就交給你了。」人事主任走過來，將一名少女帶到我身邊的座位。</div>
 <div class="draft-block draft--p left">她的年紀比我略小，看上去木訥沉穩，有種新鮮青春的氣息。</div>
@@ -25,7 +24,6 @@ author: 新葉
 <div class="draft-block draft--p left">……</div>
 <div class="draft-block draft--p left">我默默將書本抽回來，放回去架子上。</div>
 <div class="draft-block draft--p left">「下午你跟我去開會吧。」</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">今天是週五，開會完後就可以直接下班，回去度過一個美好的週末。我打著如意算盤，跟小孟在市府會議室會合。</div>
 <div class="draft-block draft--p left">今天的會議主要說明農不離的業務，這個業務未來也會交接給小孟，帶她來旁聽也好。</div>
 <div class="draft-block draft--p left">我悠閒的窩在座位上，看身旁的小孟認真做著筆記。</div>
@@ -55,7 +53,6 @@ author: 新葉
 <div class="draft-block draft--p left">「啊……好的。」小孟一愣，點頭。</div>
 <div class="draft-block draft--p left">這個點頭，開啟了她的連續加班之旅，二十天內只休了一天。</div>
 <div class="draft-block draft--p left">真是淒涼的開始。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">隔天，也就是週六一大早，在公所內看著不斷湧入的農民，我無奈的沉思。會不會因此把新人嚇跑啊？</div>
 <div class="draft-block draft--p left">單工弟正認真的指導小孟登打系統，幾位臨時被叫過來支援的同事努力維持秩序，整個辦公室相當熱鬧。</div>
 <div class="draft-block draft--p left">小孟很快就上手了，案件一筆接一筆開始登打，單工弟轉身加入受理的行列。大家以極快的速度消化排隊人潮。</div>
@@ -85,7 +82,6 @@ author: 新葉
 <div class="draft-block draft--p left">會勘是要依序敲時間的，不要任人擺布啊啊啊！這樣工作怎麼做得完！</div>
 <div class="draft-block draft--p left">我抱頭，在內心吶喊。</div>
 <div class="draft-block draft--p left">沒事沒事，來日方長，這只是身為指導員的我的小失誤，嗯嗯嗯。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">農地勘查撇步、公文系統操作，接下來的幾週，我慢慢將這幾年的經驗傳授給她。</div>
 <div class="draft-block draft--p left">農損受理此時也告一段落，在優秀的單工弟及其他同事協助下，很快就完成資料校對。</div>
 <div class="draft-block draft--p left">去年轟轟烈烈的受理及校對，恍若一場夢。</div>
