--- a/_posts/2022-07-28-VOCUS-公務員日常不日常-day95-第二位新人-登場.html
+++ b/_posts/2022-07-28-VOCUS-公務員日常不日常-day95-第二位新人-登場.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:3708px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1549389055-008961ff0002?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fHRocmVlJTIwZ2lybHxlbnwwfHx8fDE2NTkwMjE5MjM&amp;ixlib=rb-1.2.1&amp;q=80" data-width="3708" data-height="2472" data-position="center" src="https://images.unsplash.com/photo-1549389055-008961ff0002" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1549389055-008961ff0002?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fHRocmVlJTIwZ2lybHxlbnwwfHx8fDE2NTkwMjE5MjM&amp;ixlib=rb-1.2.1&amp;q=80" data-width="3708" data-height="2472" data-position="center" src="https://images.unsplash.com/photo-1549389055-008961ff0002" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">我和新來的職代妹妹大眼瞪小眼。</div>
 <div class="draft-block draft--p left">這位比新人小孟還要更年輕，似乎大學才剛畢業。</div>
 <div class="draft-block draft--p left">同事賢慧開始請長假後，短時間內便招聘了職代，聽說前一天才剛面試，今天就通知報到。</div>
@@ -22,7 +21,6 @@ author: 新葉
 <div class="draft-block draft--p left">雖然是同事賢慧的職代，但不代表要做她原先的工作。</div>
 <div class="draft-block draft--p left">工作分配表調整好，我印出來，招呼職代妹妹過來看。</div>
 <div class="draft-block draft--p left">「你的工作，是負責農業災害。」</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">有些慎重的告訴她，不過她只是冷靜的點頭表示知道。也是，雖然農業災害人人避之唯恐不及，對一個新人來講，怎麼知道其中的奧妙。</div>
 <div class="draft-block draft--p left">反而是課長的反應比較大。</div>
 <div class="draft-block draft--p left">「你確定？」課長湊過來，誇張的擠眉弄眼。</div>
@@ -32,7 +30,6 @@ author: 新葉
 <div class="draft-block draft--p left">我不放心將辦了一半的災害交出去，但手邊剛好有案件可以讓職代妹練手。</div>
 <div class="draft-block draft--p left">「首先你先開始勘查農損吧。」我將新人受訓前留下的勘查表塞到她手上。她微微愣住。</div>
 <div class="draft-block draft--p left">我真是太聰明了！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">迅速簡要的告訴她農地勘查的基本方式，我們分頭外出勘查。</div>
 <div class="draft-block draft--p left">近日天氣逐漸變得炎熱，不到上午九點的體感溫度就直逼三十度，對於勘查是一大考驗。</div>
 <div class="draft-block draft--p left">下雨天容易雷殘、大熱天容易中暑，夏日的農業災害辦理期間，每位勘查人員都是揮灑著汗水在拼命著。</div>
@@ -55,7 +52,6 @@ author: 新葉
 <div class="draft-block draft--p left">「沒關係。那你知道你是年齡不正確嗎？」工程同事淡淡的說，「你也從來沒有這種待遇……」</div>
 <div class="draft-block draft--p left">乾！好像是欸！</div>
 <div class="draft-block draft--p left">可惡，年輕妹子就是吃香！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">總之，職代妹善用自身優勢，將農損勘查完畢。據悉大多數農地都是她自己勘查，只有少部分拜託同事協助，算是適應力相當好。</div>
 <div class="draft-block draft--p left">可惜在公文處理方面就不是這麼一回事了。</div>
 <div class="draft-block draft--p left">相比凡事都認真做筆記的小孟，職代妹更傾向邊聽邊做，然後做了就忘。</div>
@@ -76,7 +72,6 @@ author: 新葉
 <div class="draft-block draft--p left">做中學、學中做。</div>
 <div class="draft-block draft--p left">雖然職代妹還是忘東忘西，但我似乎不再那麼生氣了。</div>
 <div class="draft-block draft--p left">我也在學習如何當前輩。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「你有想過你來公所上班，要常常出去看田、曬太陽嗎？」一日，我看著職代妹堅強的出門勘查、又一身汗的回來，問道。</div>
 <div class="draft-block draft--p left">「我知道呀。」職代妹一臉理所當然的看我，反而讓我驚訝。「我來應徵之前就被家人告誡過了，說最近災害一直開，要一直看田。」</div>
 <div class="draft-block draft--p left">原來早就有心理準備了！</div>
@@ -87,7 +82,6 @@ author: 新葉
 <div class="draft-block draft--p left">雖然這個作物的種植面積不大，但對新手來說仍然有壓力。</div>
 <div class="draft-block draft--p left">「不用擔心，我們一起加油。」鼓勵著她，我看了一眼日曆，「而且小孟受訓快回來了，到時又多一個人手可以看田囉。」</div>
 <div class="draft-block draft--p left">「太好了！」職代妹的眼神閃閃發亮。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">小孟歸隊後，農業的承辦正式恢復三個人，緊繃的業務量終於舒緩一些。</div>
 <div class="draft-block draft--p left">我介紹兩人認識，開始了帶領兩隻小雞成長的日子。一左一右窩在我身邊，看我操作電腦示範的場景儼然成了某種日常。</div>
 <div class="draft-block draft--p left">只希望她們趕快成長茁壯呀！</div>
