--- a/_posts/2022-09-08-VOCUS-公務員日常不日常-day97-休耕轉作申報.html
+++ b/_posts/2022-09-08-VOCUS-公務員日常不日常-day97-休耕轉作申報.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:5472px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1457530378978-8bac673b8062?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDU3fHxmYXJtZXJ8ZW58MHx8fHwxNjYyNjQyMDUx&amp;ixlib=rb-1.2.1&amp;q=80" data-width="5472" data-height="3648" data-position="center" src="https://images.unsplash.com/photo-1457530378978-8bac673b8062" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1457530378978-8bac673b8062?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDU3fHxmYXJtZXJ8ZW58MHx8fHwxNjYyNjQyMDUx&amp;ixlib=rb-1.2.1&amp;q=80" data-width="5472" data-height="3648" data-position="center" src="https://images.unsplash.com/photo-1457530378978-8bac673b8062" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">接手請長假的同事的業務後，我迎來第一次的休耕轉作申報。</div>
 <div class="draft-block draft--p left">「葉子，要安排二期作下鄉申報的期程了。」</div>
 <div class="draft-block draft--p left">一日，在災害依舊忙得不可開交的時候，負責休耕轉作的單工姐姐說。</div>
@@ -38,10 +37,8 @@ author: 新葉
 <div class="draft-block draft--p left">再度感激涕零。</div>
 <div class="draft-block draft--p left">我努力的將農損勘查表趕完，順利在第二週加入申報的行列。</div>
 <div class="draft-block draft--p left">轉作申報有一個月的時間，和十天內高強度受理的農損不同，有充裕的準備期可以分散人潮。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">－－強烈建議災害不要逼著十天含假日受理，雖然會這樣是要加快災後復耕的速度，但老實說越趕就越容易出事。</div>
 <div class="draft-block draft--p left">比如說補助資料各種打錯、農民擠成一團、有人沒申報到來拍桌等等。痛苦的回憶。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">轉作申報第二週，開始到各里去受理。一次下鄉都是兩個人互相照應、一個人留在公所，跟兩位單工討論後，決定了排班順序。</div>
 <div class="draft-block draft--p left">這天，是我第一次下鄉申報。</div>
 <div class="draft-block draft--p left">好新鮮！</div>
@@ -60,7 +57,6 @@ author: 新葉
 <div class="draft-block draft--p left">即使天氣炎熱、活動中心沒有冷氣，我背後卻冒出冷汗。我默默拿出紙筆，開始做筆記。</div>
 <div class="draft-block draft--p left">我不是略懂，我什麼都不懂。</div>
 <div class="draft-block draft--p left">許久沒體驗到新人的感覺了。最近都在帶領兩個新人，還以為自己可以當耍廢擺爛的老屁股呢，哈哈哈……</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">過了一會，那名農民離開，整個室內安靜下來。暫時沒有客人上門，大哥整理了一下桌面，將申報單疊好。</div>
 <div class="draft-block draft--p left">「因為現在很多都一次報兩期，二期作的案件量會比較少一點。啊，現在不叫一期跟二期了，叫做第一次跟第二次措施。」</div>
 <div class="draft-block draft--p left">嗯很好，連計畫名稱都改了，救命。</div>
@@ -74,7 +70,6 @@ author: 新葉
 <div class="draft-block draft--p left">……聽起來他們都沒在配合啊喂。</div>
 <div class="draft-block draft--p left">我停下寫筆記的手，默默覺得有點驚嚇。</div>
 <div class="draft-block draft--p left">不過我當然全力配合。怎麼敢造次。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">隔天，換單工姐姐和我出去申報。</div>
 <div class="draft-block draft--p left">這次的地點在一座廟宇，廟公看到我們抵達，便將桌子擦乾淨、椅子擺好，模樣甚是熟練。</div>
 <div class="draft-block draft--p left">這座廟位於村莊一角，前方有個很大的廣場，旁邊種了一排樹，鳥叫聲此起彼落，相當熱鬧。</div>
@@ -92,7 +87,6 @@ author: 新葉
 <div class="draft-block draft--p left">架設鳥網在農地是不行的，不過廟宇大概沒有規定。</div>
 <div class="draft-block draft--p left">繼續乖乖受理申報，整天下來，我看見好隻次麻雀低低飛了進來，又低空飛出去。</div>
 <div class="draft-block draft--p left">……還真是訓練有素。根本沒用吧喂！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">人潮出現、人潮消失，一波一波消化申報的農民後，很快到了中午。我們收拾好，各自吃飯去。吃飽後，我抓緊時間回到公所處理公文。</div>
 <div class="draft-block draft--p left">正將公文一個個簽核出去，周遭的光線一暗，感覺被包圍住。</div>
 <div class="draft-block draft--p left">一左一右，新人小孟跟職代妹妹各自捧著一疊文件，小孟冷靜的推推眼鏡、職代妹則是眼巴巴的看著我。</div>
@@ -105,13 +99,11 @@ author: 新葉
 <div class="draft-block draft--p left">好不容易把她們教到會，也差不多到下午的申報時段，我站起身，準備出門。</div>
 <div class="draft-block draft--p left">轟一聲，夾雜著劇烈的雨聲，在身旁的窗戶響起。</div>
 <div class="draft-block draft--p left">……不會吧？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「喔？今天的午後雷陣雨真早……葉小姐？」負責管理後門進出的安心上工正端詳著外頭雨勢，看見我走過來。</div>
 <div class="draft-block draft--p left">「你是認真的嗎？」他看著我穿上雨衣、雨褲和雨鞋，毅然決然的踏出門。</div>
 <div class="draft-block draft--p left">「農民還在等著我呢！」我一副慷慨就義的模樣。才幾分鐘而已，後門已經積了一攤不淺的水窪，超大點點的雨滴不斷衝到地面，濺起水花。</div>
 <div class="draft-block draft--p left">水珠打在身上，隔著雨衣都可以感受到那個力道，好痛。</div>
 <div class="draft-block draft--p left">外出申報什麼的……好狼狽啊！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">接下來的幾天，都在午後雷陣雨中狼狽度過。結束下鄉申報的行程後，我們回到公所，繼續受理申報。</div>
 <div class="draft-block draft--p left">隨著申報經驗的累積，現在我已經可以熟練的跟農民說明轉作的規定。</div>
 <div class="draft-block draft--p left">「種食用玉米的補助多少？」</div>
