--- a/_posts/2022-09-27-VOCUS-公務員日常不日常-day98-一個農業設施-各自表述.html
+++ b/_posts/2022-09-27-VOCUS-公務員日常不日常-day98-一個農業設施-各自表述.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:2048px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1444858291040-58f756a3bdd6?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDF8fGZhcm18ZW58MHx8fHwxNjY0Mjg0NDAy&amp;ixlib=rb-1.2.1&amp;q=80" data-width="2048" data-height="1102" data-position="center" src="https://images.unsplash.com/photo-1444858291040-58f756a3bdd6" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1444858291040-58f756a3bdd6?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDF8fGZhcm18ZW58MHx8fHwxNjY0Mjg0NDAy&amp;ixlib=rb-1.2.1&amp;q=80" data-width="2048" data-height="1102" data-position="center" src="https://images.unsplash.com/photo-1444858291040-58f756a3bdd6" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">「下週要辦理各課室業務訓練，XXX負責講水保法，葉子講容許。」</div>
 <div class="draft-block draft--p left">一日，課長在群組如此指示道。</div>
 <div class="draft-block draft--p left">什麼！我才辦理容許沒多久啊！講農業災害倒是可以講好幾個小時喔！</div>
@@ -62,19 +61,16 @@ author: 新葉
 <div class="draft-block draft--p left">我看著兩個人的回覆，無語了。為什麼一個案件規費可以各自表述啊！</div>
 <div class="draft-block draft--p left">「600元。雖然以畜牧設施的做法，同一個畜牧設施不論數量，只算一筆費用。但函釋有提到以細目及數量收費。」後來，成哥這樣回答。</div>
 <div class="draft-block draft--p left">好，一對二，採用多數決。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">通知代書回來繳費後，我捧著經營計畫書開始研究。申請人對於農作物栽培管理頭頭是道，這計畫書文筆真好。</div>
 <div class="draft-block draft--p left">啊不對，我的重點應該放在經營的合理性及必要性。</div>
 <div class="draft-block draft--p left">農業設施項目眾多，常見申請案如資材室、圍牆、集貨包裝場，也有如本案的農產品加工室。</div>
 <div class="draft-block draft--p left">要依農民的經營實績去判斷是否合理。</div>
 <div class="draft-block draft--p left">雖然第一次看得迷迷糊糊，後續倒是沒什麼問題。出貨單據齊全、配置正常，會勘後也順利核發同意書。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">第一個案件結案後，我又收到幾個案件，真實感受到公所裁量權極大且定義各種模糊。</div>
 <div class="draft-block draft--p left">「成哥，車輛運迴轉空間面積多少比較合理啊？」</div>
 <div class="draft-block draft--p left">「你覺得合理就好。」</div>
 <div class="draft-block draft--p left">……我覺得都很合理啊啊啊！</div>
 <div class="draft-block draft--p left">回答得很隨性，成哥還是丟了幾個交通法規的面積資料給我，上頭有提到貨車之類的迴轉限制。好吧，我研究。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「成哥，資材室可以蓋到八米高嗎？法規的最高限制是十四米……」一天，我認真翻著講義，在電話中問。</div>
 <div class="draft-block draft--p left">「一般來說資材室不會蓋那麼高。超過一層樓就要敘明合理性及必要性。」</div>
 <div class="draft-block draft--p left">又來了，合理性及必要性！</div>
@@ -86,7 +82,6 @@ author: 新葉
 <div class="draft-block draft--p left">但反過來想想，假如任何案件都規定的清清楚楚，就沒有彈性了吧。</div>
 <div class="draft-block draft--p left">究竟規定好、還是不規定好？</div>
 <div class="draft-block draft--p left">辦了一陣子容許案件的我，依舊沒有答案。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">總之跌跌撞撞核發了幾次容許同意書，此時新人小孟報到，我隨即把農用證明的業務交接給她。</div>
 <div class="draft-block draft--p left">而容許案件，我猶豫了一下。</div>
 <div class="draft-block draft--p left">連我都不夠了解的業務，要這樣交接出去嗎？</div>
@@ -94,7 +89,6 @@ author: 新葉
 <div class="draft-block draft--p left">「對了，記得下個月會有容許查核，可能有蠻多案件要看喔。」成哥的訊息跳了出來。</div>
 <div class="draft-block draft--p left">－－交接！即刻交接！</div>
 <div class="draft-block draft--p left">不到半秒，我下定決心。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">於是，課長指定的容許授課，也順道成為了我和小孟的交接時間。</div>
 <div class="draft-block draft--p left">意氣風發的講課完，全場就只有小孟認真做著筆記。</div>
 <div class="draft-block draft--p left">嗯嗯嗯，這樣就夠了。</div>
@@ -105,4 +99,3 @@ author: 新葉
 <div class="draft-block draft--p left">拍謝，小葉子無能，請多多照顧我們的新人。</div>
 <div class="draft-block draft--p left">懺悔完畢，我回頭繼續處理其他的業務。</div>
 <div class="draft-block draft--p left">短暫的容許工作，畫下句點。</div>
-<div class="draft-block draft--p left"></div>
