--- a/_posts/2022-11-04-VOCUS-公務員日常不日常-day101-挑戰成為隱形主辦之活動篇.html
+++ b/_posts/2022-11-04-VOCUS-公務員日常不日常-day101-挑戰成為隱形主辦之活動篇.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:5472px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1637820002789-e8703c53d0d6?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDYzfHx0b2dldGhlcnxlbnwwfHx8fDE2Njc1NzE0MTM&amp;ixlib=rb-4.0.3&amp;q=80" data-width="5472" data-height="3648" data-position="center" src="https://images.unsplash.com/photo-1637820002789-e8703c53d0d6" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1637820002789-e8703c53d0d6?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDYzfHx0b2dldGhlcnxlbnwwfHx8fDE2Njc1NzE0MTM&amp;ixlib=rb-4.0.3&amp;q=80" data-width="5472" data-height="3648" data-position="center" src="https://images.unsplash.com/photo-1637820002789-e8703c53d0d6" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">時間逼近，我繼續指揮大家做事。</div>
 <div class="draft-block draft--p left">「記得做活動的小卡。」我提醒單工弟，他乖巧應允，回座位趕工去。</div>
 <div class="draft-block draft--p left">「參加的農民都有聯繫了嗎？」我問小孟，她向我晃晃手中的話筒，點頭。</div>
@@ -26,7 +25,6 @@ author: 新葉
 <div class="draft-block draft--p left">……文書軟體給我打掉重練！</div>
 <div class="draft-block draft--p left">啊不是大學剛畢業？你的報告怎麼寫的！</div>
 <div class="draft-block draft--p left">我以為文書排版是基本常識，但顯然不是。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">話說之前拍攝影片時，職代妹也有類似狀況。</div>
 <div class="draft-block draft--p left">我們拍攝是用手機拍，拍完後我將隨身碟丟給職代妹，請她將手機影片檔案存給我。</div>
 <div class="draft-block draft--p left">職代妹照做了，而我打開資料夾時，發現影片容量很小，不禁感嘆了一下iPhone的厲害。</div>
@@ -35,7 +33,6 @@ author: 新葉
 <div class="draft-block draft--p left">「……」有種東西叫做傳輸線！</div>
 <div class="draft-block draft--p left">我默默押著職代妹，逼她重新傳輸一次檔案。</div>
 <div class="draft-block draft--p left">這次的影片大小跟畫質正常多了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">想著想著，忍不住感慨年代的差異。</div>
 <div class="draft-block draft--p left">啊不對，又沒差幾歲，我也很年輕。</div>
 <div class="draft-block draft--p left">有些我認為是常識的事情，或許對某些人來說是新知。就當互相切磋學習了。</div>
@@ -44,7 +41,6 @@ author: 新葉
 <div class="draft-block draft--p left">活動前我誠心前往附近的廟宇拜拜，祈求活動順利。</div>
 <div class="draft-block draft--p left">「葉子你們一直很認真在這個地方辦活動、做推廣，沒問題的。」退休後在廟宇當志工的同仁笑著對我說。</div>
 <div class="draft-block draft--p left">沒錯，一定沒問題的。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">當天。</div>
 <div class="draft-block draft--p left">同仁忙碌的將活動物品搬上車，分次載運到活動會場。幾名同仁在會場等待，依據箱子上頭的標示送到不同帳篷。</div>
 <div class="draft-block draft--p left">我滿意的看著大家動作，並重新審視了一下流程表。</div>
@@ -70,7 +66,6 @@ author: 新葉
 <div class="draft-block draft--p left">「喂，教大家怎麼做。」我制止單工弟繼續瞎忙下去。</div>
 <div class="draft-block draft--p left">好熟悉的感覺，曾經我也是一個人悶頭工作，也不好意思請他人幫忙。</div>
 <div class="draft-block draft--p left">一個人做事有一個人的好處，不會被自己雷到；然而團結力量大，總是要學著將工作分派下去。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">眼角又瞄見區長走過去、還有掛名執行長的課長也經過，我拋下活動組，跑過去報告目前的進度。</div>
 <div class="draft-block draft--p left">「等等XXX長官會來，改讓他頒獎。」區長揮揮手，又瀟灑的下令了。</div>
 <div class="draft-block draft--p left">乾！又改！</div>
@@ -79,7 +74,6 @@ author: 新葉
 <div class="draft-block draft--p left">無限眼神死。</div>
 <div class="draft-block draft--p left">我認命繼續找各組調整細流，但也不忘提醒他們隨機應變。</div>
 <div class="draft-block draft--p left">因為活動嘛，不可能完全照流程走的吧！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">果不其然，XXX長官抵達時，市長也到了——欸，竟然提早到！</div>
 <div class="draft-block draft--p left">頒獎緊急調整成讓市長頒獎，只見舞臺組的大家一陣慌亂，市長在台上東看西看，就是不知道自己要站哪裡。</div>
 <div class="draft-block draft--p left">啊……回去檢討報告寫不完啦……</div>
@@ -106,7 +100,6 @@ author: 新葉
 <div class="draft-block draft--p left">這是我、還有大家一起合力舉辦的活動喔！</div>
 <div class="draft-block draft--p left">好久沒有這樣的成就感了。</div>
 <div class="draft-block draft--p left">雖然辦活動很累人，但很好玩。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「葉小姐辛苦了！」在其中一個帳篷的農二代笑著對我招手。協會理事長正在舞臺前為了人氣獎活動而忙碌，身為兒子的農二代就在展售攤位負責顧攤。</div>
 <div class="draft-block draft--p left">這個活動也是農二代協助規劃出來的，感恩再感恩。</div>
 <div class="draft-block draft--p left">「大家的反應還不錯，希望這次可以是『第一屆』，未來成為本地指標的活動。」農二代熱情的說。</div>
@@ -118,14 +111,12 @@ author: 新葉
 <div class="draft-block draft--p left">這樣一個小小的活動真的有改變什麼嗎？</div>
 <div class="draft-block draft--p left">知名度和以往一樣，銷售狀況也普普通通。甚至有的遊客看看就走了。</div>
 <div class="draft-block draft--p left">但只要還有預算、還有辦活動的可能性，我們就會繼續嘗試下去吧。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">傍晚時分，在主持人的謝幕中，活動圓滿結束。</div>
 <div class="draft-block draft--p left">「好、累！」單工弟癱在椅子上，身上有陰影斜線還有怨氣。</div>
 <div class="draft-block draft--p left">「我也很累啊！快來搬東西！」職代妹戳戳他，不齒的說。</div>
 <div class="draft-block draft--p left">「……」小孟一整天在舞臺不斷指揮組員，已經沒聲音了。</div>
 <div class="draft-block draft--p left">「謝謝你們，辛苦了！」看著他們，我發自內心感謝。</div>
 <div class="draft-block draft--p left">這不是我一個人的活動，是有大家才能順利完成的活動。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">以前的我學習一個活動的構成，現在的我學會如何詳細分工、讓活動更加精緻。</div>
 <div class="draft-block draft--p left">至於未來呢？</div>
 <div class="draft-block draft--p left">時候到了就知道了。</div>
