--- a/_posts/2022-11-04-VOCUS-公務員日常不日常-day99-挑戰成為隱形主辦之籌備篇.html
+++ b/_posts/2022-11-04-VOCUS-公務員日常不日常-day99-挑戰成為隱形主辦之籌備篇.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6016px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1527219525722-f9767a7f2884?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDN8fHBsYW58ZW58MHx8fHwxNjY3NTcwMjk5&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6016" data-height="4000" data-position="center" src="https://images.unsplash.com/photo-1527219525722-f9767a7f2884" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1527219525722-f9767a7f2884?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDN8fHBsYW58ZW58MHx8fHwxNjY3NTcwMjk5&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6016" data-height="4000" data-position="center" src="https://images.unsplash.com/photo-1527219525722-f9767a7f2884" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">那是接近年底的某個週末上午，我和同事去支援某單位舉辦的農產品展售活動。</div>
 <div class="draft-block draft--p left">只是很普通的支援，擺個小攤位做做政令宣導、賺個補休。</div>
 <div class="draft-block draft--p left">「我希望我們的水果可以做個交流展售活動！」產業協會的理事長剛好在我們隔壁攤位擺攤，只見他容光煥發，如是說。</div>
@@ -21,9 +20,7 @@ author: 新葉
 <div class="draft-block draft--p left">「……？」安心弟瞪大了眼，看起來倒是相當不安心。</div>
 <div class="draft-block draft--p left">總之，也沒什麼在意這件事，我將安心弟苦思一週後拼湊出的計畫書修改好，便將計畫送給市府。</div>
 <div class="draft-block draft--p left">然後今年年初，計畫莫名核准了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">欸不是，這是全新的計畫耶！雖然沒要多少錢，直接核准我很害怕耶！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">收到公文時我很錯愕，不過因為那時正經歷職代姐提早離開、賢慧請長假、帶兩位新人又要辦災害的黑暗期，只能先擱著。</div>
 <div class="draft-block draft--p left">又過了幾個月，已經逼近該水果的產期，再不辦活動就來不及了，我只好打起精神正視這件事。</div>
 <div class="draft-block draft--p left">總之，先請廠商估價吧。</div>
@@ -54,8 +51,6 @@ author: 新葉
 <div class="draft-block draft--p left">將活動構想告訴同仁們，我讓這三位副組長分頭進行任務。</div>
 <div class="draft-block draft--p left">之前曾經旁觀過其他人辦理的活動（<a href="https://vocus.cc/article/6267ee11fd89780001fe2253" target="_blank" class="draft--a">Day89：活動旁觀好吃驚</a>），即使主辦本人不在現場，各位工作人員仍然在各自的崗位執行任務。</div>
 <div class="draft-block draft--p left">我也要挑戰成為隱形主辦！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">我意氣風發的繼續寫分工表，結果寫到最後才發現沒有地方放自己的名字。</div>
 <div class="draft-block draft--p left">……隱形得太徹底了啊啊啊！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">（下篇待續）</div>
