--- a/_posts/2022-12-14-VOCUS-公務員日常不日常-day102-災害與轉作系統上課-上.html
+++ b/_posts/2022-12-14-VOCUS-公務員日常不日常-day102-災害與轉作系統上課-上.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6016px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1573496773855-81df06b5097b?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDE5fHxzb2Z0d2FyZSUyMGVuZ2luZWVyfGVufDB8fHx8MTY3MTAzMTk5Nw&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6016" data-height="4016" data-position="center" src="https://images.unsplash.com/photo-1573496773855-81df06b5097b" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1573496773855-81df06b5097b?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDE5fHxzb2Z0d2FyZSUyMGVuZ2luZWVyfGVufDB8fHx8MTY3MTAzMTk5Nw&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6016" data-height="4016" data-position="center" src="https://images.unsplash.com/photo-1573496773855-81df06b5097b" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">汛期前與年末，是各種操作系統上課的時期。</div>
 <div class="draft-block draft--p left">今年的汛期前適逢疫情，大多數課程採線上授課。</div>
 <div class="draft-block draft--p left">不過線上上課的效率實在不好，待在自家房間只想耍廢、在辦公室又會被各種電話及訪客干擾，幾乎沒有學習效果。</div>
@@ -17,14 +16,12 @@ author: 新葉
 <div class="draft-block draft--p left">災害系統我已經摸很熟了，轉作系統我則是邊操作邊摸索，也大致有個底。</div>
 <div class="draft-block draft--p left">這次剛好在某兩個週間，分別參加災害系統及轉作系統的教育訓練。與其說是來學習如何使用系統，不如說是來看看有哪個隱藏功能是我遺漏的。</div>
 <div class="draft-block draft--p left">就來聊聊心得吧。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「葉子葉子，這個『農業天然災害系統教育訓練』……」</div>
 <div class="draft-block draft--p left">「報名連結給我，我也要去。」想也不想，我馬上回答職代妹。</div>
 <div class="draft-block draft--p left">「可是公文寫教室空間有限，一個公所限一人報名耶。」職代妹指著螢幕，說。</div>
 <div class="draft-block draft--p left">「我們不用太在意小細節。」我拍拍她的肩膀。</div>
 <div class="draft-block draft--p left">「……？」不明所以的職代妹依言將連結傳給我。</div>
 <div class="draft-block draft--p left">幾週後，我們抵達上課的地點。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">不用進公所就是開心！</div>
 <div class="draft-block draft--p left">走進電腦教室，我伸了個懶腰。</div>
 <div class="draft-block draft--p left">「葉子，你不是沒有辦災害了嗎？」其他公所的同事打招呼道。</div>
@@ -42,17 +39,13 @@ author: 新葉
 <div class="draft-block draft--p left">在電話交談中，很明顯感受到他對系統的認真與了解，實際的講課也能發現他很努力要將系統改良到最好。</div>
 <div class="draft-block draft--p left">「這堂課認真聽喔，老師講得很詳細。」我提醒職代妹。</div>
 <div class="draft-block draft--p left">不同於照本宣科的課程，這堂課有滿滿的實機操作示範。我也是希望可以聽他講課，才報名上課的。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">講師開始上課，鉅細靡遺的從受理申報開始講起。太過詳細到職代妹的眼神逐漸死亡。</div>
 <div class="draft-block draft--p left">唔，好吧，有些內容確實太基本了，這個時期的承辦們早就摸過一遍系統了，應該講些重點呀。</div>
 <div class="draft-block draft--p left">像是看戲一般觀察大家無神的反應，我倒是聽得很開心，並記下新改版的地方。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「檢核新增了一項……」</div>
 <div class="draft-block draft--p left">記得這個功能之前沒有，我還發電子郵件請農糧署協助調資料，而農糧署也迅速轉發給工程師，立刻解決我的問題。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「為了避免報送的困擾，……」</div>
 <div class="draft-block draft--p left">那個功能我上次抱怨超久的，結果工程師又問得更加詳細，想要理解第一線遇到的障礙在哪裡，也真的改善了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">正感嘆著，我想起之前遇到災害系統跑太慢的狀況。</div>
 <div class="draft-block draft--p left">有一陣子系統在首頁載入異常緩慢，原以為是暫時性的問題，過了幾週不見改善，我終於受不了打給工程師。</div>
 <div class="draft-block draft--p left">「咦？我沒發現，你是第一個反應的。」電話另一頭，工程師如是驚訝道。</div>
@@ -60,7 +53,6 @@ author: 新葉
 <div class="draft-block draft--p left">「我大概知道是哪裡出問題，等等馬上調整。我想是因為葉小姐你們那邊的資料量太多了，才會有明顯等待的感覺。」</div>
 <div class="draft-block draft--p left">……原來如此，系統轉圈圈，轉一圈就叫出所有資料、跟轉好幾圈才叫出所有資料的差別呀！</div>
 <div class="draft-block draft--p left">我也不希望我們案件那麼多呀嗚嗚嗚……</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">回過神，差不多到了中場休息，幾個同仁跑到前面去問問題，我也湊上前去聽。</div>
 <div class="draft-block draft--p left">依舊是認真傾聽、反問、做筆記的模式，工程師一一跟他們討論，並承諾回去研究如何改良。</div>
 <div class="draft-block draft--p left">樂在其中的工作，就是這麼一回事吧。</div>
@@ -69,5 +61,4 @@ author: 新葉
 <div class="draft-block draft--p left">「沒事，你們繼續。」我趕緊躲更遠。請當我路過。</div>
 <div class="draft-block draft--p left">不確定未來我還會不會繼續辦災害，也許這次上課是最後一次、也許不是。</div>
 <div class="draft-block draft--p left">但不管如何，把握當下學到的新知就對了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">（下篇待續）</div>
