--- a/_posts/2022-12-14-VOCUS-公務員日常不日常-day103-災害與轉作系統上課-下.html
+++ b/_posts/2022-12-14-VOCUS-公務員日常不日常-day103-災害與轉作系統上課-下.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6016px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1573165231859-48b6a66b8b1d?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDQ1fHxzb2Z0d2FyZSUyMGVuZ2luZWVyfGVufDB8fHx8MTY3MTAzMjI1OQ&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6016" data-height="4016" data-position="center" src="https://images.unsplash.com/photo-1573165231859-48b6a66b8b1d" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1573165231859-48b6a66b8b1d?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDQ1fHxzb2Z0d2FyZSUyMGVuZ2luZWVyfGVufDB8fHx8MTY3MTAzMjI1OQ&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6016" data-height="4016" data-position="center" src="https://images.unsplash.com/photo-1573165231859-48b6a66b8b1d" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">災害系統課程結束後隔週，是休耕轉作系統教育訓練。</div>
 <div class="draft-block draft--p left">在上課前幾天，我剛好遇到新改版流程的疑問，打電話去其他公所詢問資深前輩。</div>
 <div class="draft-block draft--p left">「喔這個啊，昨天上課有教到。」前輩說。她參加的場次跟我不同，才剛結束而已。</div>
@@ -27,7 +26,6 @@ author: 新葉
 <div class="draft-block draft--p left">我的腦海中出現了被兩位單工在地上踹的畫面。</div>
 <div class="draft-block draft--p left">「葉子，我剛剛去會計室問這個月的薪水……」單工大哥這時剛好回到辦公室，和藹的開口。</div>
 <div class="draft-block draft--p left">「對不起！」我只能拼命賠罪，立刻將薪資動支單以最速件送出。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">帶著罪惡的心，我迎來上課的日子。</div>
 <div class="draft-block draft--p left">兩位單工也有參加課程，看起來比我還從容。</div>
 <div class="draft-block draft--p left">這次的課程在外地上課，幾乎沒有認識的公所同仁。講師是蓄著長髮的男性，很具風格。</div>
@@ -62,7 +60,6 @@ author: 新葉
 <div class="draft-block draft--p left">「關於勘查app的資料修改，有三種方法，一種是手機修改後重新上傳、一種是系統直接改，還有一種是放水流，推薦給大家。」最後，講師一本正經的講著不正經的話，然後又開始分享八卦了起來。</div>
 <div class="draft-block draft--p left">……這個就不用筆記了吧。</div>
 <div class="draft-block draft--p left">我默默放下筆。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">課程結束，我收拾包包，在教室外面攔住正要離開的單工大哥與單工姐姐。</div>
 <div class="draft-block draft--p left">從門口旁的櫃子拉出保冷袋，我神秘的拿出方才偷溜去買的飲料——聽說是當地的有名店家、排隊美食，為了買飲料我特定提早兩天打去訂！</div>
 <div class="draft-block draft--p left">兩位同仁的眼睛亮了起來。</div>
