--- a/_posts/2022-12-25-VOCUS-普及寫作的難度-8.html
+++ b/_posts/2022-12-25-VOCUS-普及寫作的難度-8.html
@@ -42,7 +42,7 @@ author: 王立第二戰研所
 <ul>
   <li class="draft-block draft--li">連遊戲都知道不能這樣做了（編）</li>
 </ul>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/zakulxOX3-A?t=25"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/zakulxOX3-A"></iframe></div>
 <div class="draft-block draft--p left">第二種方法，不要求一次講完，分拆小單元解釋，像是要討論戰機性能，就只講引擎馬力跟速度關係，下一篇再提對載重的影響，再下一篇提燃油跟彈藥，再下下一篇說航程，再下下下……</div>
 <div class="draft-block draft--p left">很花時間，就是把<span style="font-weight: bold; ">複雜的系統，拆解成十幾篇以上的短文，每篇只講一件事，不要過度延伸。</span>軍事是系統化作戰，一款武器的強弱無法逆轉整個戰爭，我們軍普目的是教育，想要把知識常識化、常識普及化，而這只能當作小學數學教，先從加法而後減法，之後才能上乘法。</div>
 <div class="draft-block draft--p left">太想要展現自己對武器多熟悉，通篇專業術語跟數字，這沒有普及效果。最慘的是，你想要推廣的對象都離開，剩下本來就知道的人抱團取暖。</div>
@@ -57,4 +57,3 @@ author: 王立第二戰研所
   <li class="draft-block draft--li">封鎖有物理限制，最大的限制就是空間，在台灣攻擊範圍封鎖太過危險，離太遠的地方則海域太過廣大，所需成本會等比級數攀升。</li>
 </ol>
 <div><h3><a href="https://vocus.cc/article/5f535a40fd89780001d2b979">台海軍事常識普及化──和我們聽過的一些軍事流言（3）｜方格子 vocus</a></h3><span>因為實在想不出題目，又沒啥好談的，看來這段時間有想到什麼就提一下，照例先說明，這篇目的是軍普，會犧牲掉部分的精確度，力求容易理解技術性問題。 封鎖台灣也是數十年來沒有消退過的謠言，主要內容大致分為兩方向： ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fd2a6d2ofes041u.cloudfront.net%2Fresize%3Fnorotation%3Dtrue%26url%3Dhttps%253A%252F%252Fimages.vocus.cc%252Ffa541827-7ca5-41c6-a7ee-a67cbb69f9d8.jpg%26width%3D1200%26sign%3DSIePG0cvAQ235wa66PKoizyO3nkwg4LBpb9dbViOyf0&amp;width=550&amp;sign=f0oiX6EUO6mUvPudasZMhRHrFoGcOqLwv7-ueiQGGeI"></div>
-<div class="draft-block draft--p left"></div>
