--- a/_posts/2023-02-12-VOCUS-平屋慢生活-平凡的日子很值得.html
+++ b/_posts/2023-02-12-VOCUS-平屋慢生活-平凡的日子很值得.html
@@ -47,4 +47,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">一樣講鄉下人到東京．日劇《東京女子圖鑑》與漫畫《平屋慢生活》呈現出兩種不同面向，而一樣獲得許多人的喜愛和好評，同樣在東京生活有著不同的故事與發展。</div>
 <div class="draft-block draft--p left">那時候翻拍《東京女子圖鑑》的眾多圖鑑最大的問題是，它們只想著要如何製造鄉下與都市的反差，而沒有想過同樣的方式不能刻板複製，而是借鑒這個主題，創作另一種地方化的故事。</div>
 <div class="draft-block draft--p left">《平屋慢生活》一樣講述來東京發展，努力要融入大都市的人群，但它並沒有什麼力爭上游或獲取更好的男人女人等故事，而是以另一種方式描述在都會生活的苦與樂，並且有一點點讓人溫難的平凡生活，反而也觸動讀者的內心。食材都一樣，要怎麼調味好吃有各種不同的料理方式，最怕是東施效顰，弄得自以為在地到頭來還是自以為。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/tb5FpI6C4xI"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/tb5FpI6C4xI"></iframe></div>
