--- a/_posts/2021-06-21-VOCUS-公務員日常不日常-day70-起起伏伏活動主辦記事-中.html
+++ b/_posts/2021-06-21-VOCUS-公務員日常不日常-day70-起起伏伏活動主辦記事-中.html
@@ -8,7 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1612933510543-5b442296703b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDIzfHxhbnhpZXR5fGVufDB8fHx8MTYyNDI4MTkyOA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="1350" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1612933510543-5b442296703b" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1612933510543-5b442296703b?crop=entropy&amp;cs=tinysrgb&amp;fit=max&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDIzfHxhbnhpZXR5fGVufDB8fHx8MTYyNDI4MTkyOA&amp;ixlib=rb-1.2.1&amp;q=80&amp;w=1080" data-width="1080" data-height="1350" data-unsplash="[object Object]" data-position="center" src="https://images.unsplash.com/photo-1612933510543-5b442296703b" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">「葉子，區長找我們，要討論活動的事情。」某日，小雅說。</div>
 <div class="draft-block draft--p left">我和小雅一同上樓，只見區長室坐著兩位不認識的客人，正和區長聊天著。</div>
 <div class="draft-block draft--p left">「葉子，這次活動不要訂什麼便當，我要請XXX小姐她們幫忙弄特色美食自助吧。」</div>
@@ -19,7 +19,6 @@ author: 新葉
 <div class="draft-block draft--p left">等客人離開後，我懷疑的看向區長。「報告區長，這次農業局只給了X萬元而已，原先我們的餐費只預計抓八千元左右。」</div>
 <div class="draft-block draft--p left">「八千元太少了。長官來賓能吃些什麼？從你們課的業務費去支用。」</div>
 <div class="draft-block draft--p left">嗯嗯嗯，又來了。繼續花吧，年底沒錢就不用辦活動了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「葉子，你現在跟我報告目前活動的進度。」可能有一些空閒時間，區長說道。他還碎念說課長一問三不知，都不知道底下的承辦進度到哪裡。</div>
 <div class="draft-block draft--p left">這很正常，課長來去如風，有事失蹤、沒事一派輕鬆，很是優秀。</div>
 <div class="draft-block draft--p left">「我和小雅討論過，預計攤位招商五到十攤……」我看了小雅一眼，報告道。</div>
@@ -59,7 +58,6 @@ author: 新葉
 <div class="draft-block draft--p left">但我依舊不懂，明明是區長指示要給民政課辦活動的，怎麼短短不到幾週，就變了卦，還一副理所當然的樣子。</div>
 <div class="draft-block draft--p left">……區長已經有一點年紀了，該不會，記憶力退化？</div>
 <div class="draft-block draft--p left">我又氣又慌，氣的是區長出爾反爾，慌的是我這下變成真·主辦了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">但事情還沒結束。</div>
 <div class="draft-block draft--p left">和區長會談隔日，我出差整天，沒有進去公所。</div>
 <div class="draft-block draft--p left">「葉子，民政課長剛剛跟我說活動他們要放手，你有頭緒嗎？」課長傳了訊息過來。</div>
@@ -70,7 +68,6 @@ author: 新葉
 <div class="draft-block draft--p left">心驚膽戰的思考著對策，課長又再次傳訊息過來。</div>
 <div class="draft-block draft--p left">「沒事了，民政課還是會幫忙處理其中一個活動。你明天把工作人員分配表擬出來，主秘要討論權責分工。」</div>
 <div class="draft-block draft--p left">「收到。」</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">隔天，我立刻去找小雅。</div>
 <div class="draft-block draft--p left">「小雅，直說無妨，昨天發生了什麼事？」</div>
 <div class="draft-block draft--p left">「我昨天拿補休簽給我們課長核章，但課長說這不是我們課的工作，就去找你們課長談了。」小雅沉默了一下，繼續說：「其實你那天的話……真的很像在推工作，感覺蠻差的。」</div>
@@ -82,7 +79,6 @@ author: 新葉
 <div class="draft-block draft--p left">大勢已定，如今我不可能將活動推回去。</div>
 <div class="draft-block draft--p left">「我還是會把原先負責的部分處理好，不用擔心。」小雅保證道。</div>
 <div class="draft-block draft--p left">「嗯，謝謝你。」</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">和她談話完畢，緊接著就到了主秘開會時間。</div>
 <div class="draft-block draft--p left">開會目的主要討論權責分工，這次我將攤位組及節目組分別給兩個課室負責，而人事、會計等課室則分散到接待組及交通指揮組。我們課當然負責最主要且最吃重的活動組。</div>
 <div class="draft-block draft--p left">之前的水果節，我幾乎將所有事前的工作全包了，不管是招商、節目編排等等，都自行處理完畢。然而這次的時程比以往緊湊、活動內容也豐富許多，我決定分攤工作出去，讓大家一起幫忙。</div>
@@ -105,5 +101,4 @@ author: 新葉
 <div class="draft-block draft--p left">我據理力爭，但對於現況沒有任何改變的力量。</div>
 <div class="draft-block draft--p left">真奇怪，以前的我對於辦活動是充滿成就感的。</div>
 <div class="draft-block draft--p left">現在的我，只覺得主辦活動很衰、非常衰。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">（下篇待續）</div>
