--- a/_posts/2022-08-19-VOCUS-公務員日常不日常-day96-耍廢公務員-誕生.html
+++ b/_posts/2022-08-19-VOCUS-公務員日常不日常-day96-耍廢公務員-誕生.html
@@ -8,19 +8,16 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:4285px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1546272989-40c92939c6c2?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDF8fGNoaWNrfGVufDB8fHx8MTY2MDkwODQzOQ&amp;ixlib=rb-1.2.1&amp;q=80" data-width="4285" data-height="3648" data-position="center" src="https://images.unsplash.com/photo-1546272989-40c92939c6c2" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1546272989-40c92939c6c2?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDF8fGNoaWNrfGVufDB8fHx8MTY2MDkwODQzOQ&amp;ixlib=rb-1.2.1&amp;q=80" data-width="4285" data-height="3648" data-position="center" src="https://images.unsplash.com/photo-1546272989-40c92939c6c2" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">待在公所已經好幾年，回頭一看，整個辦公室的同仁換了一半以上，不知不覺我也成為正職人員中前幾名的資深員工。</div>
 <div class="draft-block draft--p left">……才幾年而已就算資深，這地方陣亡率好高啊啊啊！</div>
 <div class="draft-block draft--p left">當然跟臨時人員無法比，公所中許多哥哥姐姐都待了十幾年以上，是無法超越的存在。</div>
 <div class="draft-block draft--p left">話說我也才工作幾年而已，曬斑出現了、臉蛋憔悴了許多，聽說眼神也失去了光……</div>
 <div class="draft-block draft--p left">看了看職代妹妹跟新人小孟，我開始感慨自己青春年華的逝去。</div>
 <div class="draft-block draft--p left">打起精神，我繼續指導兩位新人。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">小孟是考試進來的正職人員，負責農地的工作。才剛受訓回來的她，公文操作什麼的幾乎忘光光，而且看來還有一些羞恥心不敢問我，只會偷偷問職代妹。</div>
 <div class="draft-block draft--p left">職代妹雖然同樣剛就職沒多久，也是很熱心教她。不過有一次被我聽到妹妹說「總之將文都存查就對了」後，我決定將這兩隻小雞抓起來重新教一次。</div>
 <div class="draft-block draft--p left">不要好的不學，淨是學一些壞的！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">此時的我，將業務重新調整後，鬆了口氣。不再是工作量吃緊的狀態、棘手的工作都丟了出去，終於可以當一個耍廢的老屁股了……吧？</div>
 <div class="draft-block draft--p left">正想像著自己未來的好日子，我幾乎忘記手頭還有一個尚未處理完的災害。</div>
 <div class="draft-block draft--p left">而且，下一個災害又公告了。</div>
@@ -57,7 +54,6 @@ author: 新葉
 <div class="draft-block draft--p left">「好。」職代妹收回眼淚，笑咪咪的開始整理抽查表。</div>
 <div class="draft-block draft--p left">我絕對不是跟良心投降了！我只是忽然想到應該有始有終，我要盯著抽查不能出任何差錯！</div>
 <div class="draft-block draft--p left">想當一個耍廢前輩，好難。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「葉子，請問農舍申請怎麼處理？」剛結束跟職代妹的對話，換小孟來找我。</div>
 <div class="draft-block draft--p left">她捧著厚厚一疊文件，指了指站在櫃檯前面殷殷期盼的民眾。</div>
 <div class="draft-block draft--p left">「不要隨便攬工作回來，農舍是農業局在處理的，不是我們。」我怎麼記得之前有跟她說過？有吧！</div>
@@ -66,12 +62,10 @@ author: 新葉
 <div class="draft-block draft--p left">「還有這件簡易水保……」小孟又亮出另一份文件。</div>
 <div class="draft-block draft--p left">「拿去給負責水保的同事！」我應該有將工作分配表給你才對吧！</div>
 <div class="draft-block draft--p left">我幾乎眼神死，不過不能怪小孟，要怪就怪我想耍廢，然後廢到自己。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">話說，在成為公務員之前，我對公務員的想像是什麼？</div>
 <div class="draft-block draft--p left">我早就隱約知道工作會很忙碌，只是圖一個穩定罷了。</div>
 <div class="draft-block draft--p left">耍廢、裝忙、推工作、準時下班，老早就不存在現在的辦公室、現在年輕一輩的公務界。</div>
 <div class="draft-block draft--p left">忙了這麼多年，忽然要慢下步伐，也不是我的風格。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">我嘆了口氣，將手邊的貨源證明案件整理一下，準備出門看田。</div>
 <div class="draft-block draft--p left">「這個好像是我的業務喔。」職代妹眼尖看見我手上的文件，主動舉手說道。</div>
 <div class="draft-block draft--p left">咦？</div>
@@ -81,7 +75,6 @@ author: 新葉
 <div class="draft-block draft--p left">「我收回之前的話，看來你還有很多要學習。」我拍拍她的肩膀，將貨源案件交給她。</div>
 <div class="draft-block draft--p left">「什麼？」職代妹眨着眼，依舊不明所以。</div>
 <div class="draft-block draft--p left">沒事。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">後來我陪著職代妹將抽查處理完，也陪她將主辦的災害解決；而小孟還沒將講義的函釋讀完，新的案件就一直進來，忙到不可開交，每天都跟我求救。</div>
 <div class="draft-block draft--p left">大家都在各自的崗位忙碌著。</div>
 <div class="draft-block draft--p left">「喂？是產業推廣的承辦嗎？農糧署的XXX計畫還沒有執行喔，什麼時候要做？」</div>
@@ -104,4 +97,4 @@ author: 新葉
   <li class="draft-block draft--li"><a href="https://www.facebook.com/biutheatre/" target="_blank" class="draft--a">追蹤不可無料劇場</a></li>
   <li class="draft-block draft--li">故事簡介：<br>在地方政府工作十幾年的科長李榮華，正面臨公務員生涯中有史以來最大危機！<br>李榮華在銷毀相關證據時發現了一個沾血的公文夾，突然間，曾經在公家機關上班的黃光耀鬼魂竟突然現身，死纏爛打請李榮華調查為什麼他會死掉的真相。在你看我我看你的眼神交會中，一段超越陰陽兩界，關於人與鬼的大冒險，即將開始.....</li>
 </ul>
-<figure class="draft--imgNormal draft-block"><div><img style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/56b0516c-725e-4198-a701-5a9563baa86a.jpg" data-width="2048" data-height="1151" data-position="center" src="https://images.vocus.cc/56b0516c-725e-4198-a701-5a9563baa86a.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/56b0516c-725e-4198-a701-5a9563baa86a.jpg" data-width="2048" data-height="1151" data-position="center" src="https://images.vocus.cc/56b0516c-725e-4198-a701-5a9563baa86a.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
