--- a/_posts/2022-11-04-VOCUS-公務員日常不日常-day100-挑戰成為隱形主辦之導演篇.html
+++ b/_posts/2022-11-04-VOCUS-公務員日常不日常-day100-挑戰成為隱形主辦之導演篇.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6240px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1532800783378-1bed60adaf58?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDJ8fGFjdG9yfGVufDB8fHx8MTY2NzU3MDcyMA&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6240" data-height="4160" data-position="center" src="https://images.unsplash.com/photo-1532800783378-1bed60adaf58" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1532800783378-1bed60adaf58?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDJ8fGFjdG9yfGVufDB8fHx8MTY2NzU3MDcyMA&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6240" data-height="4160" data-position="center" src="https://images.unsplash.com/photo-1532800783378-1bed60adaf58" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">最後在分工表加了一項「聯絡人兼場控：葉子」後，工作分配大致底定。</div>
 <div class="draft-block draft--p left">「今年有要拍影片嗎？」</div>
 <div class="draft-block draft--p left">各種事前準備如火如荼的進行著，一日我送文件到會計室，被會計妹子問了一句。</div>
@@ -22,7 +21,6 @@ author: 新葉
 <div class="draft-block draft--p left">「你願意幫我嗎？」</div>
 <div class="draft-block draft--p left">「我可以幫你打光，露臉別想。」會計笑吟吟著說。</div>
 <div class="draft-block draft--p left">可、可惡。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">演員人選，我首先瞄準今年報到的新人。</div>
 <div class="draft-block draft--p left">不是職代妹或是小孟，因為她們已經被我壓榨得厲害，當演員太不好意思。</div>
 <div class="draft-block draft--p left">她們擔任我的攝影團隊就好！</div>
@@ -41,18 +39,15 @@ author: 新葉
 <div class="draft-block draft--p left">「歡迎、歡迎！」課長笑容滿面的跟我說道，並俯身鄭重的拍拍那名男主的肩膀，「好好表現。」</div>
 <div class="draft-block draft--p left">「……？」從頭到尾沒在狀況內、也沒講一句話的男士就這樣被賣掉了。</div>
 <div class="draft-block draft--p left">演員名單，搞定！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「……以上，劇本大致這樣，沒問題吧？」我立即召集兩位演員及兩位攝影——雖然小孟跟職代妹幾分鐘前才被任命為攝影師及副攝，但她們馬上進入狀況。</div>
 <div class="draft-block draft--p left">「經費可以買穩定器嗎？我手會抖。」小孟推推眼鏡，開始規劃起來。</div>
 <div class="draft-block draft--p left">「呃，沒錢。」如果有錢的話，我們就不用自己拍啦！</div>
 <div class="draft-block draft--p left">職代妹已經去一旁開始準備拍攝道具了。男主及女主還一臉驚嚇貌，剛剛真的有認真聽我的劇情介紹嗎？</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">總之，臨時湊成的拍攝團隊，很快在鄰近的活動中心開拍。</div>
 <div class="draft-block draft--p left">小孟竟然真的將裝備升級成三軸穩定器，據說是跟行政課借的。厲害，我在公所待那麼久，都不知道有這種設備。職代妹則手持另一支穩定器，好奇的東拍西拍。</div>
 <div class="draft-block draft--p left">聽說要拍影片，一蹦一跳跑來幫忙的民政課男同事，指派為副導演。</div>
 <div class="draft-block draft--p left">還有真的來打燈的淡定會計室妹子，及路過的單工同仁們。</div>
 <div class="draft-block draft--p left">我們的團隊人數莫名變得有點多呀！</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">「Action！」</div>
 <div class="draft-block draft--p left">我神氣的發號施令，演員們也分別就拍攝位置。唔，有夠僵硬！</div>
 <div class="draft-block draft--p left">「來，我示範一次。」副導演溜到鏡頭前，流暢的將女主走進活動中心並撞到男主的畫面表現出來。</div>
@@ -63,7 +58,6 @@ author: 新葉
 <div class="draft-block draft--p left">「要不要當第二男主角？我可以立刻修改劇本。」我斜眼看副導。</div>
 <div class="draft-block draft--p left">「免談。」副導一臉笑瞇瞇。明明就樂在其中，可惜！</div>
 <div class="draft-block draft--p left">裝備升級加上演員的配合度極好，我們的拍攝很快結束。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">回辦公室，我意氣風發的開始剪影片。花了不少時間及燃燒熱情後，總算將影片剪好。</div>
 <div class="draft-block draft--p left">這時我忽然想到一件事。</div>
 <div class="draft-block draft--p left">我忘記先請區長過目劇本內容了！</div>
@@ -78,16 +72,12 @@ author: 新葉
 <div class="draft-block draft--p left">您根本沒看影片吧！雖然有男主角動心的畫面沒錯啦喂！</div>
 <div class="draft-block draft--p left">「預計明天發佈。」我謹慎的報告道，見區長點頭，趕緊離開。</div>
 <div class="draft-block draft--p left">看來可以稍微放心了。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">影片發佈後，因為配合分享抽獎活動，獲得了小小的迴響。</div>
 <div class="draft-block draft--p left">其實拍攝影片完全出自我覺得好玩而已，要不要拍倒是隨意。也很幸運長官放手讓我們去規劃。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">題外話，在影片發佈後隔週，我接到某公所的電話，無力的詢問我如何用影片搭配抽獎。</div>
 <div class="draft-block draft--p left">原來他們長官看到我們拍的影片，也打算如法炮製。</div>
 <div class="draft-block draft--p left">自己好玩就算了，被迫追加工作確實很心累吧！</div>
 <div class="draft-block draft--p left">在心中幫他們哀悼。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">宣傳影片發佈後，活動前的籌備加速進行，各組副組長更加忙碌起來。</div>
 <div class="draft-block draft--p left">其中種種故事，且待下回分享。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">（下篇待續）</div>
